Update VOCUS 2022-09-02 patch

--- a/_posts/2021-01-30-VOCUS-圖地-臺灣人口首次負成長-地圖全解析.html
+++ b/_posts/2021-01-30-VOCUS-圖地-臺灣人口首次負成長-地圖全解析.html
@@ -10,7 +10,9 @@ author: 第六星球
 
 <p>你知道嗎？去年台灣人口負成長！</p>
 <p>2020年一整年，台灣人口從年初的2360萬人下降至年底的2356萬人，成長率 -0.18%。這是台灣二戰以來第一次全年人口負成長，而且自然增加和社會增加雙雙都負成長。</p>
+<img src="https://images.vocus.cc/406d89b1-2344-4af9-88ec-cbbb16af02ea.jpg" alt="自然增加，出生與死亡人數趨勢圖，2011-2020">
 <p>自然增加，出生與死亡人數趨勢圖，2011-2020</p>
+<img src="https://images.vocus.cc/59f29dc2-88f9-4404-ac86-52b3a96a626f.jpg" alt="社會增加，移入與移出人數趨勢圖，2011-2020">
 <p>社會增加，移入與移出人數趨勢圖，2011-2020</p>
 <p>讓我們來看看2020年台灣人口創下哪些紀錄！</p>
 <ol>
@@ -24,8 +26,11 @@ author: 第六星球
 </ol>
 <p>自然增加的趨勢或許可以理解。但是為什麼社會負成長如此之高？因為疫情？可是台灣防疫不是很成功嗎？歡迎大家留言討論。</p>
 <p>不過，雖然說台灣人口整體是在下降，但各個地方的狀況非常不同。有鄉鎮甚至成長了6.1%。讓我們一起來看看人口成長的地圖。</p>
+<img src="https://images.vocus.cc/cbf6c8f0-e3bf-47c2-acc0-f14101115b4b.jpg" alt="2020台灣人口成長地圖">
 <p>2020台灣人口成長地圖</p>
+<img src="https://images.vocus.cc/bdc80984-f70e-4de6-97c0-1b668da6cbc6.jpg" alt="2020台灣人口增加地圖">
 <p>2020台灣人口增加地圖</p>
+<img src="https://images.vocus.cc/f6064964-f8eb-43b9-86fd-615109e264b1.jpg" alt="2020台灣人口減少地圖">
 <p>2020台灣人口減少地圖</p>
 <p>以下整理幾個看點給大家：</p>
 <ol>
@@ -38,8 +43,7 @@ author: 第六星球
   <li>連江縣包辦人口正、負成長第一名的鄉鎮，整體成長率1.45%，全國第一名。</li>
   <li>人口持續往市區以外流動，台北市、台中市、高雄市區都人口負成長。台北周圍的林口、淡水、汐止，持續高成長。</li>
 </ol>
-<blockquote>&nbsp;資料來源</blockquote>
+<blockquote>資料來源</blockquote>
 <ul>
   <li><a href="https://www.moi.gov.tw/cp.aspx?n=5590">內政部 統計報告</a></li>
 </ul>
-<h3><br></h3>
