--- a/_posts/2021-04-05-VOCUS-每一次性騷擾都重演-me-too-比較鄭家純遭性騷擾與-性掠食者與牠們的帝國-書籍分享.html
+++ b/_posts/2021-04-05-VOCUS-每一次性騷擾都重演-me-too-比較鄭家純遭性騷擾與-性掠食者與牠們的帝國-書籍分享.html
@@ -10,11 +10,12 @@ author: 黃琪樺
 
 <blockquote>本文以記錄「溫斯坦性騷擾、性侵」新聞調查經過的著作《性掠食者與牠們的帝國》，比較雞排妹鄭家純指控在尾牙上遭性騷擾一事，發現事件諸多發展如出一徹，包含受害者反應、輿論媒體的操作手法、後續更多人跳出來控訴等，幾乎重演了#Me Too。</blockquote>
 <blockquote>以下文章直接引述書中受害者對性攻擊的描述，可能造成不適，請斟酌觀看。</blockquote>
-<p><br></p>
+<img src="https://images.unsplash.com/photo-1551565426-1bc3f807f076">
 <p>2017年10月10日，《紐約客》（The New Yorker）刊登了一篇由記者羅南．法羅（Ronan Farrow）撰寫，十三位女性指控電影製片哈維．溫斯坦（Harvey Weinstein）性騷擾、性侵的<a href="https://www.newyorker.com/news/news-desk/from-aggressive-overtures-to-sexual-assault-harvey-weinsteins-accusers-tell-their-stories">報導</a>，引發全美譁然。緊接著，是更多女性站出來控訴溫斯坦或其他人的報導，成為日後被稱作#Me Too的全球性別運動的濫觴。</p>
 <p>一系列指控溫斯坦惡行的報導，讓年僅30歲的法羅榮獲<a href="https://www.pulitzer.org/winners/new-york-times-reporting-led-jodi-kantor-and-megan-twohey-and-new-yorker-reporting-ronan">2018年普立茲獎「公共服務獎」</a>（Public Service）。2019年，他出版<em>Catch and Kill: Lies, Spies, and a Conspiracy to Protect Predators</em>，以近乎全知觀點，宛如電影的敘事手法，寫下他製作這系列報導時，展開了小說般曲折迂迴的調查經過，包含新聞被打壓、遭多位信任的人背叛、受生命威脅、遭人跟蹤監視等。</p>
 <p>這本推出後佳評如潮的轟動之作，於2021年1月在臺灣出版，譯為《性掠食者與牠們的帝國》。當月底，鄭家純在<a href="https://www.facebook.com/ili19930831official/posts/3451187605004098">FB貼文</a>揭露尾牙性騷擾，立刻在網路上掀起熱議，更引發作家盧郁佳說的<a href="https://www.voicettank.org/single-post/2021020801">「給反服貿、反送中示威者的待遇，消滅政敵的層級」</a>的媒體關注。</p>
 <p>比較臺美兩起同樣是演藝圈性騷擾事件，會發現諸多發展驚人地相似。從事發當下受害者的反應，到公開事件後輿論媒體的操作手法，後續更多人跳出來控訴等，幾乎都沿著相同軌跡演變。下文將依時間順序比對兩件事。</p>
+<img src="https://images.unsplash.com/photo-1508225957744-04aa7ca4cfac" alt="鄭家純公開遭翁立友、強勝公司老闆性騷擾事件，幾乎重演#Me Too">
 <p>鄭家純公開遭翁立友、強勝公司老闆性騷擾事件，幾乎重演#Me Too</p>
 <h3>不是「完美受害者」就不是受害者</h3>
 <p>一種對性受害者常見的攻訐是：當下怎麼不講？為什麼不反抗？無論輿論或<a href="https://womany.net/read/article/17854">司法程序</a>裡，都不乏這種企圖以當下幾秒鐘的反應，來斷言受害者動機的論點。</p>
@@ -23,6 +24,7 @@ author: 黃琪樺
 <p>而鄭家純面對言詞或肢體騷擾，也許是<a href="https://www.facebook.com/ili19930831official/posts/3452673434855515">考量在場黑道或員工觀感</a>，也許是單純嚇到而沒有反映。實情是，任何人面對這種突如其來、毫無徵兆的暴力侵犯，都會因為權力關係、人際關係、個人特質等諸多外部或內部因素，而有不同作為。任何人都不應草率將一種「典範式」受害劇本套用在被害者身上，要求他是一個<a href="https://www.38.org.tw/news2_detail.asp?mem_auto=494&amp;p_kind=%E7%8F%BE%E4%BB%A3%E6%B6%88%E6%81%AF&amp;p_kind2=%E5%BF%83%E6%83%85%E5%AF%AB%E7%9C%9F">完美被害人</a>，並反過來檢討被害人為什麼沒有這樣那樣。就連<a href="https://www.thenewslens.com/article/139306">館長陳之漢突然遭摸胸時</a>，也任由他人騷擾近五分鐘而沒有作為。</p>
 <p>義大利演員阿簡托（Asia Argento）告訴法羅，溫斯坦「在她連聲抗議下對其進行口交⋯⋯到了某個點上，她放棄了說不要，轉而假裝享受的模樣，因為她覺得不這樣溫斯坦不會罷休」。事發後的幾年間，她仍斷斷續續與溫斯坦上了幾次床，沒能拒絕他的緊迫跟蹤與執著求歡。為此，她的解釋是「被嚇到了，被他的緊迫盯人弄得疲憊不堪」，且深怕影視工作被他毀掉。<strong>［註3］</strong></p>
 <p>另一個同樣看似違反直覺，實則展現權力極度不對等的例子是，NBC員工奈維爾斯（Brooke Nevils）遭當家主持人勞爾（Matt Lauer）強暴後，他問她喜歡嗎？她回答喜歡，並在日後持續與他發生數次關係。勞爾的地位遠在她之上，令她認為自己沒有空間說不，「那完全是一種利益交換」。<strong>［註4］</strong></p>
+<img src="https://images.unsplash.com/photo-1602058176018-7915d6bd37ae" alt="「完美受害者」是一種迷思">
 <p><strong>「完美受害者」是一種迷思</strong></p>
 <h3>先射箭再畫靶</h3>
 <p><strong>「罵人是婊子來汙辱人，顯然是一種世界語言。」［註5］</strong></p>
@@ -30,6 +32,7 @@ author: 黃琪樺
 <p>勇於向警局報案揭發溫斯坦騷擾的演員古提耶若茲（Ambra Battilana Gutierrez），也被小報媒體抹黑造謠。原先聚焦在溫斯坦亂摸她的報導，頓時被她先前曾參加性交派對，論斷她本來就有「在賣」的影射詆毀，以及穿著性感內衣、比基尼的照片取代。<strong>［註7］</strong></p>
 <p>偵辦法羅的父親——知名導演伍迪．艾倫（Woody Allen）遭控性虐待養女狄倫（Dylan Farrow）一案的員警，也被艾倫組織的私家偵探網跟蹤，企圖蒐集他們酗酒或賭博的證據，阻撓辦案，最終導致檢察官決定放棄起訴。<strong>［註8］</strong></p>
 <p>上述種種作為乃司馬昭之心，無非想藉由將當事人連結保守社會無能公開討論或容忍的道德底線，進行<a href="https://womany.net/read/article/16914">「蕩婦羞辱」</a>並重挫其可信度，甚至轉移焦點，回頭檢討受害者。演員漢納（Daryl Hannah）在一則關於女性揭露受害經驗時，內心的糾結與掙扎的專題訪問中提到：妳的身分、性別、有沒有報案根本沒差，因為根本不會有人相信妳，「事實上說沒人相信是客氣了——我們會被譴責、被批判、被怪罪」。<strong>［註9］</strong></p>
+<img src="https://images.unsplash.com/photo-1589959864690-24091a905ea1" alt="沒有人會想相信一個「蕩婦」吧？">
 <p><strong>沒有人會想相信一個「蕩婦」吧？</strong></p>
 <h3>不解決問題，解決講話的人</h3>
 <p>資深經紀人孫德榮<a href="http://mirrormedia.mg/story/20210205edi046/">在媒體上放話封殺鄭</a><a href="https://www.youtube.com/watch?v=KSWJcX6lxSY&amp;ab_channel=ETtoday%E6%98%9F%E5%85%89%E9%9B%B2%2F%E5%AE%98%E6%96%B9%E5%B9%B3%E5%8F%B0">家</a><a href="http://mirrormedia.mg/story/20210205edi046/">純</a>，「不該有的垃圾就不要讓它進來」。資深藝人<a href="https://tw.appledaily.com/entertainment/20210205/K4K6MSI6F5EOHNZN376UD2GNVU/">曾國城稱某些互動很正常</a>，「妳不會聊天就不要出來賺錢」。兩位都在引起風波後宣稱不是媒體報導的那個意思，孫德榮還找了臺灣防暴聯盟監事姚淑文一起<a href="https://star.ettoday.net/news/1918702">開直播洗白</a>。</p>
@@ -44,6 +47,7 @@ author: 黃琪樺
 <p>法羅寫出《性掠食者與牠們的帝國》最大的意義不止於揭露溫斯坦侵犯數十位女性或讓更多人，而是更廣泛地指出這種「把女性當獵物的長期掠食行為」已經成為一種固定犯罪手法、極富效率的生產線，參與的包含助理、經紀人、權力掮客，而溫斯坦不過是無邊無底的共犯結構裡的其中一員。<strong>［註17］</strong></p>
 <p>此外，為了弭平被害者事後的爭議，這些政治人物、好萊塢權力核心、媒體公司高層、明星名人等加害者會聘用律師，提供大筆和解金與封口合約，要求被害者日後絕口不提此事。</p>
 <p>層出不窮的事件，助長了受司法、政治、媒體庇蔭的荒謬體系與「商業模式」，使得越來越多人以一種源於八卦報圈的說法，形容這種砸大錢讓事件永不見光的行為：「抓來殺」（Catch and Kill，即原文書名）。<strong>［註18］</strong></p>
+<img src="https://images.unsplash.com/photo-1600492515568-8868f609511e" alt="「抓來殺」已經有固定犯罪手法，形成一種受司法、政治、媒體庇蔭的荒謬體系與「商業模式」。">
 <p>「抓來殺」已經有固定犯罪手法，形成一種受司法、政治、媒體庇蔭的荒謬體系與「商業模式」。</p>
 <h3>後續：受傷的人需要被聆聽</h3>
 <p>前文分析的種種相似之處，旨在放眼未來，當有同樣事件發生時，能有更多人不再落入對受害者荒謬的要求或苛責。</p>
