--- a/_posts/2021-06-06-VOCUS-圖地-中正國小有幾間.html
+++ b/_posts/2021-06-06-VOCUS-圖地-中正國小有幾間.html
@@ -12,12 +12,11 @@ author: 第六星球
 <p>建國愛國復興中興、三民主義民族民權民生、四維八德忠孝仁愛信義和平、中正中山介壽經國，這一類的詞彙遍佈臺灣每個聚落，各處都有民族路、仁愛國小……。</p>
 <p>這樣的現象主要是1950～1980年代臺灣經歷威權統治的緣故。全國各地為數不少的公共建設都以這些思想訓示的字詞為名，或是直接以總統、國父的名字取名。</p>
 <p>儘管臺灣1987年解嚴至今已超過三十年，但在複雜的政治社會因素之下，這些名稱持續保留至今天，見證這段不被遺忘的歷史。</p>
-<p><br></p>
+<img src="https://images.vocus.cc/fa082349-0b95-461b-852d-5568c4cfbb9a.jpg">
 <p>統計教育部109學年度國民小學清單，全臺灣2668間國小，最多見的校名是中正國小18間。其次是中山國小、成功國小各有16間。忠孝、仁愛、信義、和平、大同、新興、復興也都有10間以上，遍及全國。</p>
 <p>在2010年縣市合併後，台中市和高雄市都擁有兩間中正國小，因而需要加上區名才能區辨兩間學校。值得一提的是，介壽國小全國只有3間，數量不算特別多。</p>
-<p><br>
-&nbsp;</p>
-<p><br></p>
+<img src="https://images.vocus.cc/1c311dae-140f-46a0-818d-5ae1650820bc.jpg">
+<img src="https://images.vocus.cc/e2c841b2-4564-4067-84a7-fc366233363a.jpg">
 <p>國中的情形與國小類似，最多撞名的是中正國中7間，其次是中山國中6間。其他數量較多的則是忠孝5間，自強、信義、三民、成功各4間。介壽國中也有3間。</p>
 <p>高中職的校名與國中小有較大的差異，大多使用地名作為通用名稱。最多見的校名是臺南，有6間學校：臺南一中、臺南二中、臺南女中、臺南高中、臺南高商、臺南海事。接著排序的是嘉義、臺中、臺東、花蓮各5間。至於中山有4間，中正有3間。</p>
 <p>大專院校數量的名稱更為多元，較少有撞名的問題發生。我們熟悉的中正大學坐落於嘉義民雄，中山大學則位於高雄市。</p>
