--- a/_posts/2021-06-06-VOCUS-圖地-國內航線排名+地圖.html
+++ b/_posts/2021-06-06-VOCUS-圖地-國內航線排名+地圖.html
@@ -9,12 +9,12 @@ author: 第六星球
 ---
 
 <p>你知道 2020年臺灣最熱門的國內航線是哪些嗎？不囉嗦我們直接來看地圖～</p>
-<p><br></p>
+<img src="https://images.vocus.cc/99490de4-7c41-4625-be7e-d70f75514e82.jpg">
 <p>✈️ 2020年國內最熱門的航線是【台北=澎湖】，總共有107.4萬人次搭乘。第二名【台北=金門】有93.4萬人次。第三名【高雄=澎湖】有76.7萬人次。</p>
 <p>從地圖上可以看出來目前國內航線主要是來往台灣本島和離島，離島航線占比所有國內航線94%。東部航線則占了剩下的6%，其中又以【台北=台東】占大宗。至於西部航線一條都沒有。</p>
 <p>若從機場的角度來看，台北松山機場是服務最多國內線旅客的機場，澎湖機場名列第二，金門機場第三。</p>
 <p>不過，二十年前的航空業榮景可不是這樣。</p>
-<p><br></p>
+<img src="https://images.vocus.cc/ec3dfb0f-2277-4c9c-a9a3-43ecb1c0821f.jpg">
 <p>2000年高鐵仍在興建，南來北往最快的方法不是鐵路，而是飛機。【台北=高雄】占國內航線旅客36%，【台北=台南】12.8%。換句話說，國內航線有一半的旅客是要來往南北兩地。</p>
 <p>【台北=台中】航線在當時高居第四名！但需要特別注意的是，2000年的台中機場不是今天的清泉崗機場，而是已經拆除的水湳機場，位於比較靠近市中心的西屯區。</p>
 <p>2000年的十大航線有八條飛往台北，三條飛往高雄。2020年的十大航線，台北、馬公、金門，各有四條，也顯示二十年來國內航線的重心從西部運輸轉為聯絡本島和離島。</p>
