--- a/_posts/2021-06-10-VOCUS-从奸淫幼女案观中国司法之恶.html
+++ b/_posts/2021-06-10-VOCUS-从奸淫幼女案观中国司法之恶.html
@@ -8,172 +8,116 @@ tags: blog
 author: 方舟與中國
 ---
 
-<p><br></p>
-<p><br>
-<br>
-</p>
+<img src="https://telegra.ph/file/50c5c5d06f51c77a99786.png">
 <p><strong>1 . 祖国的花朵和社会主义中的摧花手</strong></p>
-<p><br></p>
 <p>记得在小时候，师长们爱对孩子们灌输一句话：“你们是祖国的花朵，未来的希望。”</p>
 <p>这句话一直被当作赞誉，——既被称为祖国的花朵，那么社会主义自然是培育他们的温床。然而人们越成长越发现这比喻透出一股诡异，因为摸不准花朵究竟是用来呵护还是用来糟蹋的。</p>
 <p>这在于我们有一个爱塑造圣人的体制，而偏偏人性又是一个充满弊端的东西。所以我们的园丁们往往在冠冕堂皇的外衣下，干着辣手摧花的事。也就无怪乎父母越发害怕把自己的花朵拿给祖国浇灌。</p>
-<p><br></p>
 <p>—— 2019 年 6 月在上海发生了一件举国关注的案子：一个姓周的女人带着一个 12 岁 和一个 9 岁的女童来到一家酒店，把她们带到在这里等候的上市公司董事长王振华的房间。王让周把年龄较小的那名女童留在房间，同时让她把另外一名女童带离了此地。此后他与女童单独在房间里呆了十几分钟。这事过后，王振华付给了那位周姓女子一笔不菲的酬金。</p>
 <p>女童出来后向同伴哭诉受到了侮辱，孩子的母亲在得知这件事后立即报警，经过医院的查验，女童身上被检查出阴道撕裂伤。——自然地，董事长和他的皮条客都被拘捕了。</p>
 <p>因为涉案人是上市企业董事，同时是一方巨富，且已年近 60 。而被伤害的女孩仅 9 岁，整件事可以说是爷爷辈淫辱了孙女辈，所以落差就尤为显眼。侵犯幼女这样的事本就声名恶劣，加之涉事人身份显赫，自然引发社会一片声讨。</p>
 <p>中国是一个政治为先的社会，所以会格外重视舆论。大家都估量这事不会轻易作罢，即便是巨富，处罚也定然会从严从重，按照强奸幼女的量刑来算，最低十年起步，加上情节恶劣，即便不是死刑，十几二十年牢狱或许免不了了。</p>
-<p><br>
-</p>
+<img src="https://telegra.ph/file/0bcb590c1e394d085ea75.png">
 <p>由于案情特殊，整件事调查了将近一年。初次庭审持续了 16 小时之久，可看出其中争议颇大。然而一审宣判下来，法院却定了个轻描淡写的猥亵罪，并且考虑其“影响恶劣”，还实行了顶格处罚—— 5 年。而为他牵线的那名女被告也同样以猥亵罪判处徒刑 4 年。</p>
 <p>对于中国的司法，人们总是要考虑出其不意的结局。但判决结果和预期如此偏离，着实让人难以逆料。因此舆论再次沸腾，不止对被告，也对法院一并责骂。不过中国的司法素来就乌烟瘴气，索性死猪不怕开水烫，硬着头皮等待事态平息。而且判决刚一出来，官媒人民日报就迅速宣称此结果“大快人心”！</p>
 <p>究竟人心快不快，估计人民日报社并不关心。因为就算判的是五个月，它也会“大快人心”的。通常官媒都是佯装为民发声，实际在小骂大帮忙，尽量不让法律事件扩散为政治影响。所以为社会和谐，早早地“大快人心”以扑灭舆论怒火，告诉大家就此散场了罢。</p>
 <p>但不料日人民报“大快人心”后，被告却开始不依不饶了。——他的律师很快就提交了上诉书，打算在二审中为其做无罪辩护。</p>
 <p>辩护律师言之凿凿地说：“当事人嫖娼的‘主观故意性’是有的，但 16 周岁以下的少女绝对不碰。”而当事人也顺势辩称自己只是在酒店房间关怀孩子：“我作为长辈，不能抱抱孩子吗？”</p>
 <p>所以辩护人的意思是整件案子顶多按<strong>嫖娼</strong>定罪，拘留个十几天或者缴一些罚款也就罢了。但现在把人拘押了一年不说，还定了个猥亵儿童罪。这真是莫名玷污清白，甚至可以说是法律之耻了。</p>
-<p><br></p>
 <p><strong>2 . 一桩争议案件透露的司法操作</strong></p>
-<p><br></p>
 <p>在此不管最后结局怎样，仅就案子来说十分具有代表性。因为它将我们法律中惯用的操作手段展露无遗，完全可以作为了解中国司法提纲挈领的材料。</p>
 <p>首先它透露出中国的一切很容易被舆论所左右。就此而言，司法更具备博弈色彩而不是法律色彩。有权势的人被判刑本身就是舆论推动的结果，或者说有人刻意去推动舆论。</p>
 <p>被告人的辩护律师明白，在这样的环境下品格宣言或许比举证更重要。所以他曾对外界宣称：“被告人有底线，且绝不侵犯 16 岁以下的幼女”。——这就像当年甘肃官员猥亵女童案，媒体特别强调其“从来不讲黄段子”一样。</p>
-<p><br>
-</p>
+<img src="https://telegra.ph/file/e19b8735781c2df7e03f8.png">
 <p>其次律师还以事发时间不足为由，推断当事人并未实施猥亵。他推算整个过程只有五分钟可以作案，因此猥亵很难成立。——尽管法律并没有给猥亵制定一个法定时间。</p>
 <p>听上去这都是难以成立的辩护，但这位辩护人是一位知名律师，擅长做无罪辩护且代理费高昂。这也成为他饱受诟病的地方，人们认为这样的律师总是为钱财而泯灭良知。</p>
-<p><br></p>
 <p>但公平一点说，律师的行为无可厚非，因为法律赋予了被告人辩护权。民间之所以群情汹涌，其根由还是在于中国素来存在的舞弊之风。法律的症结不在于收多少钱的律师，也不在于狡辩脱罪的富商。而是在于那像提线木偶般，被假以“法制”之名的中国司法本身的罪恶。</p>
 <p>以王振华案来说，他本身也算老江湖，行走在外几十年，什么罪重什么罪轻自有掂量。——猥亵罪顶多五年，而强奸的上限是十年，且情结严重还会加码。对于他的同案犯，也本该以刑法 359 条的“<strong>引诱、容留、介绍卖淫罪</strong>”量刑，按其中“<strong>容留，介绍不满十四岁的幼女卖淫</strong>”这个严重情节，是可以判处五年以上有期徒刑的。</p>
 <p>但中国法律的边界比较模糊，因此也就有了操作余地。——既然强奸的定义是生殖器接触，那么抵死不认掏出过生殖器就行了。但幼女的伤口又摆在那里，况且钱收了，房开了，人证物证串联起来恐怕很难抵赖。所以就要利用这个法制体系的后手，——从鉴定上做文章，从而切断证据链。</p>
 <p>在这点上辩护人提出一个说法：“幼女的阴道撕裂是陈旧伤，很可能是这个 9 岁女孩之前有过性生活，与王振华无关”。</p>
 <p>这个说法自然引发众怒，而律师如此有恃无恐的态度恐怕另有前提，就是能推翻之前的鉴定结果，因为很快就出现了这样一件事：</p>
-<p><br></p>
 <p>“北京的两家司法鉴定机构，以及七位国内权威的法医专家和 DNA 专家，对上海的门诊记录和司法鉴定意见得出了相反的结论，不支持上海鉴定所说的被害人新鲜伤痕、阴道撕裂伤、二级轻伤的结论。且上海的鉴定机构，违反了全国人大的规定，没有对外鉴定资格。”</p>
-<p><br></p>
 <p>——我们政府机构的特色就是自己很擅于推翻自己。之前分明是警察带女孩去验伤，鉴定机构隶属于司法部，一切都符合法定程序。且鉴定医生执业 16 年，技术上来说新伤旧伤还不至于混淆。当时的报告明确显示：新鲜伤痕，阴道撕裂二级轻伤。</p>
 <p>但我们的司法操作中有“国有权威”这个保护伞，再加上“权威专家”的质疑，之前的结果也就可以视作漏洞百出，完全不成立。反倒很可以怀疑是鉴定机构和那个幼女居心叵测，对一个无辜企业家进行构陷了。</p>
-<p><br></p>
 <p><strong>3 . 中国司法如何保护官僚</strong></p>
-<p><br></p>
 <p>所以说中国的法律和他的体制设计一样，都是一门精巧的艺术。毕竟自己既是裁判又是选手，法律自然也就成为了一件定制的玩具。</p>
 <p>在王振华案中，以一个机构推翻另一个机构的手段只能算低端操作，毕竟手法太过生硬，也是证据确凿之下的无奈之举。我们法律最精巧的部分是体现在条文的繁复和模棱两可上，各种条款往往可以向多个方面解释。究其原因，还是法制在政治之后，所以很多罪名本就是为了让人开脱的，如猥亵儿童罪，实际就是强奸罪的替代品，还有之前恶名昭彰的”嫖宿幼女罪“，也不外乎是异曲同工。</p>
 <p>而既然有法律是为了让人脱罪的，自然也有让人入罪的，如著名的“寻衅滋事”，及“煽动颠覆”等，无非就是打压民众的罪状，什么行为都可以囊括进去。只要让政府不满，总能够深文巧诋地让你入刑。就像知名地产商对当今圣上大不敬，就很轻易地可以拉出一串罪来。</p>
-<p><br>
-</p>
+<img src="https://telegra.ph/file/72cdc5926a26743cfdac6.png">
 <p>此外，我们的司法在操作上具有很强的系统性。——除在定罪和量刑上可以任意定夺外，还能够对一些不得已被判罪的权贵采取补救措施，例如极具特色的“保外就医”，或者“立功表现”，“发明创造”等。诸般手段，无非是为了把案子连消带打，消解于无形。</p>
 <p>如果大家记忆尚好，就应该记得屡次坐牢又屡次“立功”的<strong>孙小果</strong>。以及当年贿赂狱警伪造材料，获得改判和减刑，最终假释逃往海外的<strong>健力宝总裁</strong>。</p>
-<p><br>
-</p>
-<p><br>
-</p>
+<img src="https://telegra.ph/file/6d3c605ae43745ca00afc.png">
+<img src="https://telegra.ph/file/014b48ce3cc00e80491b5.png">
 <p>权贵一旦入狱，很可能立刻变身为学者，“写文章”，“搞发明”。再或者还可以“买案子举报”，手段不一而足，总之都是能跑路的。</p>
-<p><br>
-</p>
-<p><br>
-</p>
-<p>而且我们的司法部门无所谓程序正义，但凡经历过其中流程的人都明白，被告人在庭上的辩驳大多无用，罪名和量刑幅度其实早有定谳，庭审不过是内部协商后的对外宣告而已，以表示我们“有法可依”。中国是不存在诸如《法证先锋》《律政英雄》这类理想化的司法条件的。整个过程更像一个暗箱操作的系统，甚至某些过于敏感的案件还会私下开庭，私下宣判。&nbsp;</p>
-<p><br>
-</p>
+<img src="https://telegra.ph/file/f8f6379912e4e13606db7.png">
+<img src="https://telegra.ph/file/71181a2b8cea8218b5675.png">
+<p>而且我们的司法部门无所谓程序正义，但凡经历过其中流程的人都明白，被告人在庭上的辩驳大多无用，罪名和量刑幅度其实早有定谳，庭审不过是内部协商后的对外宣告而已，以表示我们“有法可依”。中国是不存在诸如《法证先锋》《律政英雄》这类理想化的司法条件的。整个过程更像一个暗箱操作的系统，甚至某些过于敏感的案件还会私下开庭，私下宣判。</p>
+<img src="https://telegra.ph/file/6f33869bb56bc5d78c78b.jpg">
 <p>所以人们大骂的律师也不过是个站在前台的掮客，幼女案让王振华轻判的是法官，而不是律师。他不过是群众的宣泄口，替政府转移了焦点。如果参与过司法辩护，就会明白即便知名律师也不过是个形式意义，甚至证据是否确凿都无关痛痒，最重要的还是司法后台中的权钱博弈。</p>
-<p><br></p>
-<p><strong>4 . 官僚的幼女情节与体制内人性</strong><br>
-</p>
+<p><strong>4 . 官僚的幼女情节与体制内人性</strong></p>
 <p>之所以法律会成为政治的玩物，其实正在于官僚是犯罪的高发群体。因为普通人并没有“为人民服务”的机会，因此就少了寻租套利的空间。所以一旦普通人触犯法律，当即是“法网无情”，“铁面无私”。而一旦权贵犯法，则立马变成司法解释的辩论比赛。</p>
 <p>诸如“猥亵儿童”，“嫖宿幼女”一类法律，就显然是为权贵量身定做。王振华案还不是最严重的案例，此前还有更恶劣的<strong>贵州习水嫖宿幼女案</strong>，一群政府公务员荒诞到长期且有组织性地奸淫幼女。</p>
-<p><br>
-</p>
+<img src="https://telegra.ph/file/78ff22485ca552f8207ca.png">
 <p>此外，只要搜索奸淫和猥亵幼女案件，就会发现官员和权贵是主要的涉案人群。这很大原因在于我们的体制决定了官场的主旋律就是“权”“钱”“性”，因此除开贪污腐化和权力争斗外，性淫乱就是其另一特色。</p>
 <p>而这些成员们又必然有着多种头衔，如王振华的头衔有：劳动模范，优秀企业家，先进个人，社会主义贡献奖，慈善突出贡献人物，同时也是市政协委员，人大代表。</p>
-<p><br>
-</p>
+<img src="https://telegra.ph/file/f1a53bd32ac1e958d29d6.png">
 <p>在这些官员中，人大代表和政协委员不过是入门标签。但凡光环越盛，其犯下的事越大。且平时为了自证清白，口号也要喊得异常响亮，淫棍们挂在嘴上最多的话就是：不忘初心，牢记使命，贡献社会，敢于亮剑等。</p>
-<p><br>
-</p>
+<img src="https://telegra.ph/file/83096edc8684156bb53ab.png">
 <p>究其根源，这无非是政府几十年来致力于创造“体制圣人”的产物，把政治偶像塑造得完美无缺，比清教徒更坚贞脱俗，以至于全然不考虑是否背离人性。然而唱高调又是一项组织政策，所以大家只能不停背诵党八股，不但自己接受灌输，还要不忘灌输别人。</p>
 <p>此外体制内阶级森严，从上至下都处于高压状态，一言一行往往事关生计安危。平时不但要对上溜须拍马，还要和同侪勾心斗角。以至于外表清苦，内心狂躁。道貌岸然的程度越深，世俗宣泄的欲望就越强。因此每每下了台面，就会在人性中最阴私扭曲的地方寻找出口。所以中国的贪官落马之前，基本都在反腐。嫖宿的官员落马之前，很多都在扫黄。</p>
-<p><br>
-</p>
-<p><br>
-</p>
+<img src="https://telegra.ph/file/483c9e1e5bda361c5f5c7.png">
+<img src="https://telegra.ph/file/5c182fd9033d99b4808fc.png">
 <p>曾有人说以经济罪抓中国的富商是 100% 成功的。那么以男女问题抓高官也适用。正因台前“伟大光荣正确”，所以台下还是要“阴暗褊狭猥琐”，官员生活糜败人尽皆知，包养情妇已是家常便饭。为满足欲望，更是出现五花八门的嗜好。如收集女性毛发，写性爱日记，玩弄母女，开群芳宴，多 P 群 P 等。</p>
-<p><br>
-</p>
-<p><br>
-</p>
-<p><br>
-</p>
-<p><br>
-</p>
-<p><br>
-</p>
+<img src="https://telegra.ph/file/be987c1af9dbf48e406d7.png">
+<img src="https://telegra.ph/file/5669acc36995030fd9de4.png">
+<img src="https://telegra.ph/file/77c6e0f1ad3e25e767792.png">
+<img src="https://telegra.ph/file/416e328bd7eb176e2d3ad.png">
+<img src="https://telegra.ph/file/fe0fb8209d7af6add436e.png">
 <p>但为何官员们格外钟爱幼女？这恐怕就是官僚文化的影响了。中国一直是官本位社会，为求仕进，自是倾轧算计不遗余力。而通常在权利斗争和人性扭曲中最易滋生方术和迷信崇拜，例如童女处女能带来升官发财的喜头。对这些传统，官员们是“宁可信其有”，因此牺牲一两个童女也就在所不惜了。</p>
-<p><br>
-</p>
-<p><br>
-</p>
-<p><br>
-<br>
-</p>
+<img src="https://telegra.ph/file/2d370b81ee02baddedc5b.png">
+<img src="https://telegra.ph/file/058342118732860b4bdb8.png">
+<img src="https://telegra.ph/file/c4d0cac5685505adc1a58.png">
 <p><strong>5 . 特色司法之恶</strong></p>
-<p><br></p>
 <p>实际上，奸淫幼女的案例远不止曝光的那些。很多时候官员落马并不是法律要制裁他们，而是政治要清算他们。王振华案发生在上海这样一个各路媒体聚焦的地方，所以引起的反响尤其大。而很多同类案件发生在土皇帝们盘踞的县城，也就更加耸人听闻。幼女性交易往往具备完整的服务链，皮条客手上的女孩基本可说是官员们的特供。</p>
-<p><br>
-</p>
-<p><br>
-</p>
+<img src="https://telegra.ph/file/321b3a984aaf4d3e158b3.png">
+<img src="https://telegra.ph/file/91c5fa15193067037659d.png">
 <p>既然有官员淫乱之风和幼女供应者，那么自然也配备着打压曝光和上访的势力。在中国各个城市，屡次出现报案人被各种方式打击，威胁，和关押的事件。</p>
 <p>如 2006 年“<strong>湖南永州少女被迫卖淫案</strong>”，其母把女儿从歹徒手中救出后，多次要求立案都不了了之，以至最后以上访的方式逼迫官方处理，而这个过程中数次有司法人员阻挠和逮捕她。</p>
 <p>后因这位母亲对判决表示不服，警察机关竟以其行为“扰乱社会秩序”为由，将其处以“劳动教养 1 年 6 个月”。这个劳动教养因为社会反响太大而被撤去，但被判刑的主犯又因拘押过程中有人通风报信和“假立功”而被曝光。</p>
 <p>此外，这样的行为在全国屡见不鲜，如陕西“<strong>逼学妹卖处案</strong>”的家长们就受到警察警告和威胁，说他们给政府抹了黑。</p>
-<p><br>
-</p>
+<img src="https://telegra.ph/file/a207e2d98c430003ed5c6.jpg">
 <p>同类的事件还有<strong>山东东平县强奸幼女案</strong>，警方以各种理由“不立案”。以及广西平南县举报猥亵女童的教师<strong>何思云</strong>，被学校打压辞退。还有报道海南校长带学生开房的记者，被迫于“各种压力”离职。</p>
-<p><br>
-</p>
-<p><br>
-</p>
-<p><br>
-</p>
+<img src="https://telegra.ph/file/671057647f74f52f9d3f1.png">
+<img src="https://telegra.ph/file/c2a3562a2e66ce0516af7.png">
+<img src="https://telegra.ph/file/2f9a5b435cd09f6f450ce.png">
 <p>由这些案件，可以看出整个司法过程存在各种黑色手段。且卖淫组织，罪犯和公检法机构之间常存在复杂的利益关系。很多案件是在网络曝光之后，官方才被迫立案调查。并且每每出现这种事，中国的妇女和儿童保护组织皆噤声不言，装聋作哑。——毕竟官方机构都要向组织看齐，而让组织丢丑的事，是万万不能张扬的。</p>
-<p><br></p>
 <p><strong>6 . 一体的世界，分立的文明</strong></p>
-<p><br></p>
 <p>侵犯幼女在许多国家都是重罪，因为她们是社会所认定最弱势，最没有自保能力的群体。中国自宋代开始也对侵犯幼女采取重刑，并被后世所承袭。</p>
 <p>南宋《庆元条法事类》有载：诸强奸者，女十岁以下虽和也同，流三千里，配远恶州。未成，配五百里。折伤者，绞。</p>
-<p><br>
-</p>
+<img src="https://telegra.ph/file/40c10a338abf9347357bb.png">
 <p>此后《元典章》，《大明律》，《大清律》皆沿袭宋法，采取重刑，以示对奸淫幼女绝不姑息。或许有人说古人愚昧，凡事一刀切，动辄流放绞刑。那么抛开古代，也可以参考当今世界对奸淫幼女的态度：</p>
-<p><br></p>
 <p>美国：</p>
 <p>多州规定与 14 岁以下儿童发生性关系按强奸罪处罚。五个州允许对性侵儿童者判处死刑。罪犯刑满释放后须佩戴电子追踪器，不得居住在幼儿园以及初高中校园半英里之内。</p>
-<p>2005 年的“杰西卡法案”规定，对 12 岁以下儿童实施性侵犯，一律判至少 25 年有期徒刑或终身监禁，不得假释。<br>
-</p>
+<p>2005 年的“杰西卡法案”规定，对 12 岁以下儿童实施性侵犯，一律判至少 25 年有期徒刑或终身监禁，不得假释。</p>
 <p>韩国：</p>
-<p>儿童性侵犯罪最高无期徒刑，不允许假释。出狱后佩戴电子脚环，最长年限 30 年。2010 年，韩国通过了“化学阉割法案”，对性侵犯十六岁以下儿童的犯罪者实行化学阉割，以彻底断其性欲。<br>
-</p>
+<p>儿童性侵犯罪最高无期徒刑，不允许假释。出狱后佩戴电子脚环，最长年限 30 年。2010 年，韩国通过了“化学阉割法案”，对性侵犯十六岁以下儿童的犯罪者实行化学阉割，以彻底断其性欲。</p>
 <p>新加坡：</p>
 <p>未成年人发生任何形式的性关系，不管未成年人是否同意均为非法。小于 14 岁的幼女为法定强奸，可被处最长 20 年徒刑，可被并处罚款和鞭刑。</p>
-<p><br></p>
 <p>德国：</p>
 <p>除了与儿童发生身体私密部位接触外，某些非身体接触也被认定为儿童性侵，如裸露性器官，与儿童观览色情产品等。量刑在 10 年以上或化学阉割。</p>
-<p><br></p>
 <p>波兰：</p>
 <p>世界第一个在国家层面实施“化学阉割”法的国家，——性侵 15 岁以下少男少女，在刑满出狱前必须接受“化学阉割”。</p>
-<p><br></p>
 <p>这里无需列举所有国家，但“性侵幼女”大都是重罪。且各国立法也会因某些特定事件逐步完善。如美国的<strong>《杰西卡法案》</strong>和<strong>《梅根法案》</strong>。以及韩国的<strong>赵斗顺案</strong>（电影《素媛》原型）让刑法做出了一系列修正，还有<strong>光州仁华学校性侵残疾学生</strong>而催生的“<strong>性侵害防止修正案</strong>”（即“<strong>熔炉法</strong>”）。</p>
-<p><br>
-</p>
+<img src="https://telegra.ph/file/4dd937d115acf8c35f9fb.png">
 <p>然而中国在法律上再次显示自己的独树一帜。最荒谬的莫过“嫖宿幼女”这个发明，将不谙世事的幼童定义为卖淫女。其巧妙之处就在于：买春是道德错误，自然量刑应当从轻，从而让人得以从强奸之名下脱彀。</p>
 <p>即便这个法律被废除，我们也还有猥亵罪或其它罪作为下一个遁术。加上司法鉴定也可被推翻，整个法律也就成了一个完善的保障机制。</p>
 <p>而荒谬的是，中国同时还是联合国《儿童权利公约》的缔约国之一，和人权同样恶劣的印度并列其中。该公约规定：<strong>缔约国承担保护儿童免遭一切形式的色情剥削和性侵犯之害</strong>。</p>
 <p>其实重要的并不是以中国和外国的法律相比，也不是量刑越重越好，而是中国司法本就是为压榨弱势群体而存在的。我们或许是唯一一个在司法上系统性地保护官僚犯罪的国家。所以说资本主义的共性就是法不容情，不知变通。而社会主义讲究以人为本，还是要让法治具有“弹性”，以免过于严苛而打击到队伍士气。</p>
-<p><br></p>
 <p><strong>7 . 不是题外话的题外话</strong></p>
-<p><br></p>
 <p>观察一个社会文明与否，要视其如何对待最弱势的群体，而文明的进步也正在于保护和解放他们。</p>
 <p>如果不是王振华这样的案件引起了注意，我大概不知道从何时起，已经淡泊了作为一个成年人的血性。我相信大部分中国人都已失去这种血性，也失去了正义的信念。因为一切的不公，都在政府的威压之下，或在媒体的“大快人心”中消泯。比如你可以问问身边人，有多少还记得这些年的儿童疫苗事件。</p>
 <p>实际上，一切只关注个案而不切中司法本身的行为都只是打擦边球。对一个以官僚为本的司法体系不要存有任何幻想，它只会让欺凌弱者的人有所依恃。</p>
 <p>今天的中国还不是一个文明社会，因为他不能保护其中最弱势的人。并且当今中国的大部分男人如同一群狺狺吠叫之犬，只会躲在网络中发泄怨气。一伺恶徒露出凶相，他们便如惊弓之鸟散去。</p>
 <p>很难相信中国人的血性已淡薄到如此境地。因为每个人都会为人父母，养育子女。但如果连保护未成年人的公民觉悟都没有，在侵犯幼女这样的事上都要做出卑微的姿态，那么人们早晚会吞下这隐忍的苦果。</p>
-<p><br></p>
 <p>诚然我们处于一个司法被官僚全权掌控的社会，大家畏惧潜规则而不敢声讨施暴者。但即便如此，我仍愿意身体力行去推动变革，因为我不愿自己的后代生存在晦暗的天空之下。</p>
 <p>我庆幸自己的血性还没有凋零，我同情被欺压者，同情与我们同处这个污浊世代的孩子和女性。但我同时认为，一切被压迫的男人都不应被同情，他们本该自己去争取权利，并承担这社会变革的责任。</p>
