--- a/_posts/2021-06-10-VOCUS-天助自助者-致一切等待美国拯救的人.html
+++ b/_posts/2021-06-10-VOCUS-天助自助者-致一切等待美国拯救的人.html
@@ -8,87 +8,56 @@ tags: blog
 author: 方舟與中國
 ---
 
-<p><br></p>
-<p><br>
-</p>
-<p><br></p>
+<img src="https://telegra.ph/file/e74a1e0a9a8177ce0ac8e.png">
 <h3>一群等待美国拯救的人</h3>
-<p><br></p>
 <p>很多人在小时候幻想过一种衣来伸手，饭来张口的日子，希望自己成为一个被伺候的人。这大概是因为年幼而尚无能力去改造世界，所以只能期望他人的照拂。</p>
 <p>然而很多人在成年后却仍然怀揣着幼儿期的梦想，像小孩一般幻想着天降横福，这就不是童真而是愚钝。因此他们去赌博，买彩票，或干脆做着白日梦。而在近些年，不少中国人有了自由意识，又开始萌生了另一个念头，就是等待美国的拯救。——他们等待美国打压独裁，等待美国出动军队，等待美国为自己出头，等待美国给自己民主。总之一切皆待美国的援手，就差没有期待美国给自己一个饭碗和一个女人。</p>
 <p>这或者是因为美国被誉为世界警察和民主卫士，所以让人对他产生了期许。但无论在任何场合，美国似乎都没有夸过海口要拯救世界。这就让人很难明白，——为什么有人会设想一个国家愿意自担费用和派遣士兵，去操劳另一个国家的福祉和自由。</p>
 <p>不过我们仍然看到很多人连年呼吁美国的拯救，仿佛婴孩索要父母的照料。但这些人忘了一点，就是美国并不是世界人民的父母，在道义和法律上都只对美国人负责。即便要伸出援手，也是对自己的国民和盟友。</p>
-<p><br></p>
 <h3>天助自助者</h3>
-<p><br>
-</p>
 <p>诚然，向往自由和文明是人类的天性。但如果全世界的人都在等待他人的拯救和浇灌，那么上天也没有那么多的雨露。等待的结果就是大家全都变为受压迫者，因为个个头脑精明，只求他人先行出手，好让自己捡个便宜，因此能等待救助就绝不采取主动。</p>
 <p>聪明人聚在一起往往是面面相觑，拱手相让。结果迎来的是永无休止的沉沦，直至酿成祸患和灾难。试想如果美国人也采取这种态度，那么独立战争就不会发生。他们仍然是被殖民者，也无所谓现在的美利坚合众国和民主灯塔。</p>
 <p>只因美国人明白：天助自助者，天弃自弃者。美国人常说天佑美国，但他们从不等待上帝的救济。在他们心中上帝更多是一种象征，授予他们祝福和信念去创造理想社会。</p>
 <p>况且在这世界上，好像还没有任何一个依靠施舍而达成自我救赎的国家。因为任何拯救者，即便是全能神，面对自甘沦落的人也会束手无策。如果连改善自己的境遇都不愿去尝试，那么旁人也只能袖手旁观，冷眼相对。</p>
-<p><br>
-</p>
-<p><br></p>
+<img src="https://telegra.ph/file/4dd9e7d53e3f7d33e062b.jpg">
 <h3>拯救在哪里</h3>
-<p><br></p>
 <p>对任何一个国家来说，都是本国利益至上，好比每个人只对自己的家庭负责一样。只要反问自己是否愿意为他人的家庭操劳，就能设想任何一个国家是否应该为自己操劳。</p>
 <p>诚然西方意识形态中一直有着世界性的民主愿景，美国和盟国都对世界的民主进程提供过帮助。但即便对民主国家来说，最明智的战略也是帮助那些已经做出民主尝试的国家，而不是去进行主权干预。</p>
 <p>这种帮助更多是通过软实力和道义援助的方式，而不是像很多人所臆想的那样空降一群美国士兵。如果观察我们生活的环境，就会发现——我们的电脑，互联网，以及通信设施都是一种技术帮助，否则我们还受限于信息的闭塞。世界各国开通对中国留学生的大门，分享知识和进步，也是一种帮助。发达国家与中国分享医疗技术（如脊髓灰质炎，乙肝疫苗，冷链运输等），收养中国的残疾儿童，也是一种帮助。</p>
-<p><br>
-</p>
+<img src="https://telegra.ph/file/a31576cb7fdc7577e9a6a.png">
 <p>从环保，教育，卫生，金融，到基础设施和技术培训，我们的生活无时无刻不在接受世界的援助。——如果说这些尚且让人感觉遥远，那么这里例举一个比较富有体验性的例子：大概十几年前，我的友人曾被派出所拘押 48 小时，在此期间协警告诉他们可以帮忙叫外卖便餐。这位朋友听罢很惊奇，因为就在前几年警察的作风还甚为蛮横，不会给短期拘押的人提供吃饭喝水之便。</p>
 <p>他问辅警这种转变的缘由，辅警说：这是被美国逼出来的，美国一直在指责和监督中国的人权，所以现在才让拘押的人吃饭，此外包括刑讯逼供在内的其它非人道手段也因此减轻了。</p>
-<p><br></p>
 <h3>发现身边的拯救和如何自助</h3>
-<p><br>
-</p>
 <p>如果有人认为这一切还算不上帮助，没有现实上的触感，那么很难说什么才真正称得上帮助。对一个理性的人来说，这些帮助足以让他获益匪浅。并且如果一个人尝试自救，四方也愿意伸出更多的援手。重要的是去发现身边可以获取的帮助，并学会利用这些资源。实际上很多重要资源在目前的技术条件下已唾手可得，其中有几点是务必要掌握的：</p>
-<p><br></p>
 <p><strong>1.学习态度</strong></p>
-<p><br></p>
 <p>无论国家怎么封闭，世界的文化交流的都势在必行，而人们尤其看重开放和愿意学习的人。所以除了工作所需的一技之长外，人们更应该学习世界语言，新兴事物，以及普世的价值文化。</p>
 <p>而且学习让人的眼界扩展和明辨是非，同时具有更强的信息捕获能力，这有利于在纷繁的信息环境下把握技术和社会趋势。</p>
-<p><br></p>
 <p><strong>2.抱有开放的态度</strong></p>
-<p><br></p>
 <p>要抱有对各种人群，及各种文化的开放态度。今日的世界，尤其是美国，已是一个文化混杂的社会。不要像农耕时代一样局限于自己的生活圈，要主动融入世界。这会让生活有更丰富的体验，同时也给未来提供了更多可能。</p>
 <p>当然，无论是哪种肤色哪个国家，都会面临难以消弭的种族偏见。但不要因此就对外界充满恐惧，我们的恐惧更多是来自于极端和以偏概全的宣传环境，实际上外面的危险比你平时所能遭遇的更少，而善意则比你周围更多。</p>
-<p><br></p>
 <p><strong>3.了解金融（渠道）</strong></p>
-<p><br></p>
 <p>在某种意义上，财富才是自由的命脉。因此很多人（尤其是政府）会盯住你的钱财，试图掐住你的命脉。</p>
 <p>所以在要具备更广阔的视野，学会以多元的方式去管理资产。要了解这世界上可以买卖的不仅有股票，理财，××宝。还有很多收益更高，风险更小的选择。可以交易的地方不止有上交所，深交所，还有纽约，伦敦，东京交易所。券商不止有本土的，还有国际化的如盈透证券，嘉信理财，Firstrade 等。</p>
 <p>你还不止可以买茅台和两桶油，也可以买苹果谷歌和索尼，或全世界的任何股票。你也可以在富达（fidelity）或领航（vanguard）中定投基金，实现资本的稳定收益。</p>
 <p>你可以持有不同的外汇以规避风险，世界不止有我们熟知的四大行，还有渣打，汇丰，花旗。数字银行也在兴起，只要你愿意，甚至可以通过网络开设瑞士的账户。你可以发现更有价值的交易品种和投资通道，给自己争取不被收割的权利。</p>
-<p><br></p>
 <p><strong>4.学会运用区块链</strong></p>
-<p><br></p>
 <p><strong>一定要学会运用区块链</strong>，这项技术的影响远比我们所设想的深远。它已经带来了支付手段和资源存储方式的变革，而且还在不断地波及更广阔的领域。</p>
 <p>区块链不仅仅是数字货币，这只是它的一个功能。也不要把数字货币仅仅当作<strong>投机工具</strong>，而是要当作<strong>货币工具</strong>。精明的投资者不会参与数字货币本身的赌局，而是会利用这种货币的属性，让它们发挥金融避险和<strong>资产流转</strong>的作用。</p>
 <p>区块链的重要之处是它的分布式节点，这让它不仅能流转金融资产，还能够保存思想资产。这些功能可以借助于 IPFS，steemit 等平台实现。这世界有两种东西最难控制其流动，一种是思想，一种是资本。而区块链恰恰可以作为这两者的载体。</p>
 <p>不要轻视去中心化对社会的影响，它已经悄然渗入了人们的生活，并影响到各国的货币政策。并且随着其技术运用范围的扩大，总有一天会对政治形态产生直接的威胁。</p>
-<p><br>
-<br>
-</p>
+<img src="https://telegra.ph/file/062487da9b7e309aaa0cb.jpg">
 <p><strong>5.建立价值观</strong></p>
-<p><br></p>
 <p>要建立自己的价值观并以此为生活准则，因为这能让你找到自己所归属的群体。每个国家和社会都存在某种特定的价值观，你打算投奔哪个国家，就要认同哪种价值观。——好比投奔美国，就要认同美国的价值观。投奔朝鲜，就要认同朝鲜的价值观。</p>
 <p>不要把任何国家当作公共庇护所，一方面利用他们的资源，一方面对他们的价值视若无睹。只有价值观才能引导人们寻找真正的归属。——无论多么黑暗的世道，世界上的多数人仍向往正义和博爱，而这也会成为今后文明世界的主流。</p>
 <p>不过任何时代总会存在一批彻底堕落的人，如同被毁灭的索多玛和俄摩拉。这些人的膝盖习惯下跪，脖子习惯枷锁。面对这群人，所要作的就是不同流合污，即便生活在专制之下，人们也可以选择不唱赞歌，保持心中的纯净。</p>
-<p><br></p>
 <h3>做一个脱离襁褓的成年人</h3>
-<p><br></p>
 <p>在我们身边，来自外界的帮助不胜枚举。实际上一切的交流都可以视为一种帮助，因为它能改变人的认知。而互联网则加速了这个过程，——微软和苹果建立了共通的数据平台， Google 让人们可以获取免费的信息， facebook 和 twitter 成为了世界的人文传播工具……，只要具备足够的觉察，我们所看的每一部电影，所听的每一条广播，都会带来不同的启发。</p>
 <p>当然这视你怎样定义这些工具，你可以把它们当作娱乐载体，也可以把它们作为信息渠道。外面的世界一直在伸出援手，只是我们很少承情。大部分的民族解放运动，都是在价值的传播下发动的，而罕有直接的政治干预。</p>
 <p>要明白饭不会主动喂到人嘴里，人道主义也有自己的界限。美国也好，其他国家也好，都没有理由为一个远跨重洋的政治事业鞠躬尽瘁。民主灯塔并不欠任何人，他们没有扶危济困的责任。</p>
 <p>如果你认为拯救就是把饭喂到嘴边，把衣服递到手上，助你推翻压迫者，以及把政治权利拱手献上，而你只需坐享其成，——那么这一切都只能在梦里求索。</p>
-<p><br>
-</p>
+<img src="https://telegra.ph/file/a8008aebf8d1cf5d70cb0.jpg">
 <p>做一个独立的成年人，敞开自己的胸怀并动用自己的头脑，而不是一味催促食物送到嘴边。当你采取了自助的行动时，人们才会施以援手。——实际上帮助和拯救一直都未中断，但如果连挪动身子去接纳的意识都没有，那么大家只会任由你像烂泥一般沉沦下去。</p>
-<p><br></p>
 <p>共产主义国际歌唱道：</p>
 <p>从来都没有什么救世主，也不靠神仙皇帝。</p>
-<p><br></p>
-<p>任何一个等待救助的人，都建议认真地听听这首歌。天助自助者，即便是上帝也不会帮助一个委心任命的人。自己需要选择在有生之年继续做白日梦，渴盼拯救。还是立直身躯，踏步前行。<br>
-</p>
-<p><br></p>
+<p>任何一个等待救助的人，都建议认真地听听这首歌。天助自助者，即便是上帝也不会帮助一个委心任命的人。自己需要选择在有生之年继续做白日梦，渴盼拯救。还是立直身躯，踏步前行。</p>
+<img src="https://telegra.ph/file/fbc5694004940c7e5fd41.jpg">
