--- a/_posts/2021-06-12-VOCUS-臺灣水庫地圖-圖解梅雨解渴的效果.html
+++ b/_posts/2021-06-12-VOCUS-臺灣水庫地圖-圖解梅雨解渴的效果.html
@@ -10,10 +10,11 @@ author: 第六星球
 
 <p>今年5月全台水庫大缺水，許多重要水庫的蓄水率都低於10%，多數縣市執行限水或減壓供水。由於鯉魚潭水庫蓄水狀況極差，因此台中和彰化北部更實施供五停二的限水措施。</p>
 <p>很多人看過「<a href="https://water.taiwanstat.com/">台灣即時水情</a>」網站，可以一次看到重要水庫的蓄水率。這次的地圖呈現水庫的地理位置和容量規模，以及 2021/5/28 的蓄水狀況。</p>
+<img src="https://images.vocus.cc/889fd03a-5c50-4d36-ba59-146fb508a5b8.jpg" alt="台灣水庫地圖">
 <p>台灣水庫地圖</p>
 <p>好在5月30日到6月上旬這段期間，梅雨鋒面來報到，讓全台灣水庫可以痛快解渴。以下就用兩張圖表來呈現這十幾天的時間內，梅雨為各個主要水庫挹注了多少蓄水！</p>
-<p><br></p>
-<p><br></p>
+<img src="https://images.vocus.cc/8203934e-a9b8-40cd-90ff-7b88ba391ad9.jpg">
+<img src="https://images.vocus.cc/38e90042-61ce-4c96-94e2-d697bb702e3d.jpg">
 <p>從這兩張蓄水量的圖表可以清楚看見梅雨讓水庫的蓄水量在短時間內驟升。尤其是供水台中彰化的鯉魚潭水庫，蓄水量從116萬上升27倍來到3119萬立方公尺，也讓供五停二宣告結束。</p>
 <p>原本新竹的水情也不樂觀。好在寶山第二水庫的水量從82萬狂升到1422萬立方公尺，解除可能來臨的限水危機。</p>
 <p>另一個值得注意的看點是，5/30的時候，翡翠水庫的蓄水量一枝獨秀！全台灣水庫的蓄水量加起來，都還少於翡翠水庫。也因此台北地區還不需要執行限水措施。</p>
