--- a/_posts/2021-06-20-VOCUS-圖解你不知道的文山區秘密.html
+++ b/_posts/2021-06-20-VOCUS-圖解你不知道的文山區秘密.html
@@ -11,22 +11,24 @@ author: 第六星球
 <p>文山區是台北市最南邊的區，近年來名人輩出，頑童MJ116更打響木柵的全國知名度。今天來圖解一些你可能不知道的祕密～</p>
 <h3>秘密 ① 木柵景美三十年前才合併 👍</h3>
 <p>1950年，木柵屬於台北縣木柵鄉，景美屬於台北縣景美鎮。1968年木柵和景美併入台北市變成區。直到1990年，兩區合併為文山區。只不過，木柵人還是會說自己住木柵，景美人也說自己住景美。</p>
-<p><br></p>
+<img src="https://images.vocus.cc/2d88c5eb-320b-4759-98be-cf5f54bf65bf.jpg">
 <h3>秘密 ② 景美人口一直比木柵多 👨‍👧‍👦</h3>
 <p>景美在地理上更靠近台北市，發展較早且人口較多。但是文山區公所是設置在木柵，而不是景美。隨著台北都會區擴張，房價相對低廉的的木柵吸引更多人口遷入。目前兩地人口都在13萬人左右，不過近年人口都不斷減少。</p>
+<img src="https://images.vocus.cc/726417a4-c59e-488d-a946-9a20df837c65.jpg" alt="景美與木柵人口變遷圖">
 <p>景美與木柵人口變遷圖</p>
 <h3>秘密 ③ 木柵景美到底怎麼分界？ ⛰️</h3>
 <p>你可能有聽過：景美女中其實位於木柵。世新大學靠近景美，卻是木柵的管區。萬芳醫院、海巡署常被視為木柵，但卻屬於景美管轄。許多文山區居民始終搞不清楚木柵景美的分界。</p>
 <p>從 道路 來看，興隆路一二三段都是景美，四段是木柵。辛亥路四五段是景美，六七段是木柵。木柵路全部都是木柵。</p>
 <p>從 地形 來看，界線是沿著景美山仙跡岩的稜線，在再興中學附近切開興隆路三段四段，再通過興隆山，切開萬芳路，沿著警專校園的邊界，然後以萬美街二段為界。</p>
 <p>從 里名 來看，萬隆附近六個萬字頭的里，加上所有景字頭和興字頭的里都屬於景美。萬興、萬芳、萬美和其他剩下的里則通通都是木柵。</p>
+<img src="https://images.vocus.cc/aa9ffed8-b7de-49ca-9367-56c877e0ee1b.jpg" alt="木柵景美分界地圖">
 <p>木柵景美分界地圖</p>
 <h3>秘密 ④ 木柵捷運沒有經過木柵 🚇</h3>
 <p>曾經我朋友天龍人問：台北有地方沒捷運嗎？對，木柵就是。雖然台北第一條捷運就是木柵線，但它的路線完全沒經過木柵市區。多數人必須搭公車到萬芳醫院、景美、七張、公館才能轉乘捷運。</p>
 <p>環狀線南環段預計在今年動工，將沿著木柵路興建，串聯考試院、區公所、政大等鬧區。不過忠順街和木新路沿線四萬人口居民仍舊無法直接享受捷運 😢</p>
+<img src="https://images.vocus.cc/d4803df8-a3ef-4a79-803b-be42d57bf850.jpg" alt="文山區交通地圖">
 <p>文山區交通地圖</p>
 <h3>秘密 ⑤ 文山區三面環山又靠河 💦</h3>
 <p>木柵人的共同經驗是，台北市區豔陽高照，穿過隧道抵達木柵就開始下雨。木柵和景美三面被丘陵包圍，又有景美溪流過，形成多雨潮濕的氣候。此外，現在平地都幾乎沒有空地，住宅區持續往山上闢建。看看政大後面滿山的高樓建案。</p>
-<p><br></p>
+<img src="https://images.vocus.cc/c50784db-8c73-4240-b0d2-4719144e17fd.jpg">
 <p>本次透過文山區的村里界圖、交通地圖、地形圖，來看看木柵與景美的故事。分享完五個其實已經公開的秘密，你有沒有其他祕密可以分享呢～</p>
-<p><br></p>
