--- a/_posts/2021-06-25-VOCUS-蘋果-總在-推人行前一步-之一-我今年不回家.html
+++ b/_posts/2021-06-25-VOCUS-蘋果-總在-推人行前一步-之一-我今年不回家.html
@@ -8,6 +8,7 @@ tags: blog
 author: 趙思樂
 ---
 
+<img src="https://images.vocus.cc/64bad772-b817-43f1-a1eb-2dfac266ba14.jpg" alt="#蘋果照妖鏡">
 <p>#蘋果照妖鏡</p>
 <p>文/趙思樂</p>
 <p><em>【本文本為《蘋果日報》最後一期特刊約稿，但因《蘋果日報》提前兩日停刊，本文未能被排入最後一期蘋果，在此發出，作為對《蘋果》的個人紀念。另敬請閱讀：</em><a href="https://vocus.cc/article/60d548b9fd89780001095616"><em>《〈蘋果〉總在「推人行前一步」之二：因持有《蘋果》而「煽動顛覆國家政權」的人》</em></a><em>】</em></p>
