--- a/_posts/2021-07-11-VOCUS-那些無法視為整體-也無法視為普遍性存在的人生片斷.html
+++ b/_posts/2021-07-11-VOCUS-那些無法視為整體-也無法視為普遍性存在的人生片斷.html
@@ -31,4 +31,4 @@ author: 克敏
 <p>當著多年的異鄉人，有著多數的外貌而少數的身份，即便面對對他者的攻擊，卻也可以——至少表面上——表現得與自己無關。當自己按捺不住發聲時，在他人看來，是以什麼樣的身份在說話？作為陌生人的他者，以及作為陌生人的自己，到底是如何看與被看，彼此關係如何被拿捏，是自己仍在努力權衡之事。</p>
 <p>身為不閱報的一輩，直到幾年前留意到《蘋果日報》的「人間異語」專欄，記錄鮮少被社會見到的遭遇和癖好，認知到更多生活中的非想當然。短小的專欄很可能未揭示所有事實，但片斷是存在的。而那些能讓自己在權衡時考慮的因素，往往來自於無法被放入生活排程中，「那些無法視為整體、也無法視為普遍性存在的人生片斷」。我會特別點開他人的生活博客，看看自己未經歷或沒留意到的時間變化（嬰兒成長日誌最能感受到時間流逝）。</p>
 <p>雖然不知為何，我常被視為對此無興趣就是了。</p>
-<p><br></p>
+<img src="https://assets.matters.news/embed/ef8048b5-08da-4a6b-9005-8d13476c2359.png">
