--- a/_posts/2021-07-22-VOCUS-當-政治不可凌駕體育發展之上-變成了單項協會的免死金牌.html
+++ b/_posts/2021-07-22-VOCUS-當-政治不可凌駕體育發展之上-變成了單項協會的免死金牌.html
@@ -10,7 +10,7 @@ author: 阿肯
 
 <p>開頭先 MurMur ：為什麼每次到了這個時間，我們這些「被迫永續體改參與者」就得忙起來啊，體育署你不找麻煩不行嗎？</p>
 <p>話說今天除了高端疫苗獲得緊急授權外，最讓人關注的新聞應該是本次代表台灣參加奧運的「中華台北奧運代表團」（真難聽的名字），因為選手無法搭上原本體育署承諾要給的包機商務艙，而讓代表隊工作人員與教練團坐商務艙所鬧出的軒然大波吧。</p>
-<figure>E</figure>
+<h3><a href="https://www.ettoday.net/news/20210719/2034777.htm">快訊／戴資穎擠經濟艙！奧運包機「商務艙36人」名單曝光 | ETtoday生活新聞 | ETtoday新聞雲</a></h3><span>記者鄒鎮宇／綜合報導 2020東京奧運中華代表隊19日統一包機，世界球后戴資穎無預警被分配到經濟艙，引起社會譁然，總統蔡英文及行政院長蘇貞昌都接連道歉。如今，2020東京奧運中華代表隊搭乘的A330空中巴士商務艙名單也隨之曝光。 ▲世界球后戴資穎。（圖／記者湯興漢攝） ...</span><img src="https://cdn2.ettoday.net/images/5759/d5759014.jpg">
 <p>此時，一個每次到了體育署跟單項運動協會出包時，就會被網友拿出來熱烈討論的議題又再次出現了。那就是：</p>
 <h3>政府難道不能出來管管嗎？<br>
 為什麼可以讓體育署跟協會這麼猖狂？</h3>
@@ -18,9 +18,10 @@ author: 阿肯
 <p><strong>「今天我們所提的建議，在未來四年後，也許還會在這裡再重複一次。」</strong></p>
 <p>是否真的如此？我想透過此次發生的事件的確再次獲得驗證。遺憾的是，台灣體育發展的改革，似乎永遠都牛步前進，無法一次到位。有時，還會倒退。</p>
 <p>回頭談到政府到底能不能夠透過強勢的政治運作，去影響單項運動協會的運作，進而達到台灣體育改革的目的？必須說，不是不能，但是在內部與外部因素的影響下真的非常困難（我個人覺得大概跟奇異博士預言贏過薩諾斯的機率差不多）。</p>
+<img src="https://images.vocus.cc/8d7b50fe-0c27-41ce-9ee3-86b61ed0f92b.jpg" alt="關於這個複雜的結構，林靜儀醫師有畫了張圖做說明">
 <p>關於這個複雜的結構，<a href="https://www.facebook.com/LinCYminorta/photos/a.536086019830274/3789176414521202">林靜儀醫師</a>有畫了張圖做說明</p>
 <p>有關改革的內部因素我想容後以其他文章篇幅提及。談到外部因素比較單純，就是<strong>「奧會憲章」</strong>的影響。</p>
-<figure>E</figure>
+<h3><a href="https://www.npf.org.tw/3/2091">湯銘新 | 奧運聖火引燃政治話題 請回歸體育並尊重奧運精神 | 國家政策研究基金會 | 公共政策的理性思辯與對話平台！</a></h3><span>4月25日北京奧運組委會宣佈奧運聖火傳遞路線，台北市有幸自1964年以來再度入選為引燃聖火城市之一，豈料我政府以國家主權不容矮化為由堅拒，引發群眾嘩然。有大聲疾...</span><img src="https://www.npf.org.tw/Image/nowissue/olympia-1543733.jpg">
 <p>有關於 IOC （國際奧會）對於政治干預體育的原則說明，可以參考以下的引用：</p>
 <p>就奧林匹克傳統及精神而言，由於古希臘奧運被東羅馬帝國以政治、宗教為由下令禁止的歷史教訓，因此近代奧運的復興者古柏坦自始即制訂了<strong>「政治不干預體育」</strong>的基本原則。</p>
 <p>另外，在臉書的一位<a href="https://www.facebook.com/permalink.php?story_fbid=4562745223758920&amp;id=100000704628163">熱心公共事務的朋友</a>也舉出奧林匹克憲章的 27.9 條。</p>
@@ -34,11 +35,11 @@ author: 阿肯
 <h3>真的無法可管？拿到尚方寶劍卻不敢用的體育署</h3>
 <p>說真的，也不是沒有方法可以制衡這些單項運動協會的亂象。</p>
 <p>畢竟台灣在 2017 年八月 31 日完成了國體法修法，所有的單項協會必須接受政府監督運作，否則無法獲得補助。另外，因為單項運動協會屬於社團法人，也必須依循人民團體法的監督運作。</p>
-<figure>E</figure>
+<h3><a href="https://www.thenewslens.com/article/77666">千呼萬喚《國體法》終於三讀通過，到底改了什麼？ - The News Lens 關鍵評論網</a></h3><span>在立法院拖延已久的《國民體育法》終於三讀通過，雖然還是維持「中華奧會」名稱，不過還是有四大改革，包括六個月內協會改選、財務透明化措施、協會理事長排黑條款以及關於球員贊助商的部分。如此也讓《國體法》趕在世大運台灣英雄大遊行展開前三讀通過。 （中央社）三讀修正通過條文規定，單項協會會員組成應以開放人民參與為原則，單項協會組織章程訂定及變更，應報教育部許可。 ...</span><img src="https://image1.thenewslens.com/2017/8/wot2fz2vyy92lf14g1cz83dbg0rbo8.jpg">
 <p>但是，各位必須清楚的是，對於體育署來說，這些單項運動協會可能比起上級單位教育部，可能更是他們重要的利益關係人，甚至可以說是生命共同體。</p>
 <p>因為體育署的績效，除了在學校、社會的體育項目推廣之外，另一個重要的發展重心就是<strong>「競技運動的發展績效」</strong>。而這些單項運動協會所掌控的資源，對於該項項目是否能夠培訓菁英人才，進而達到奪牌佳績，才是體育署最關心的。</p>
 <p>也因此，當這些單項運動協會開始對政府的監督「耍賴」，體育署可是拿他們一點辦法都沒有。你不砍嘛，上頭老闆教育部、立法院跟台灣民眾、社會輿論都會釘你。你砍了嘛，小事單項運動協會相應不理，嚴重點的話，直接寄出「奧運憲章」這塊免死金牌出來，要求政府依照奧運憲章或該項目國際單項運動組織的規章，不得干預發展運作。</p>
-<figure>E</figure>
+<h3><a href="https://tw.appledaily.com/sports/20180405/GMWBGWRZSSULNQBOCM3D4ZKMZI/">足協改選爭議FIFA將訪臺擺平　來函特別要求別藏信｜蘋果新聞網｜蘋果日報</a></h3><span>我國足球協會改選被FIFA(The Fédération Internationale de Football Association，國際足球總會)認定程序不公，3月9日來函喊卡，當時足協祕書長陳威任表示12日晚間才收到，但也是14日信函另行遭公布後才承認。FIFA於3月29日再度發文，FIFA與亞洲足球聯會聯合代表團將於4月18~20日來訪，釐清爭議並讓改選順利。 ...</span><img src="https://static-arc.appledaily.com.tw/20180405/GMWBGWRZSSULNQBOCM3D4ZKMZI/img/XFVVHGHXPQY6GSSMWDDHG3SZOU.jpg">
 <p>（類似的事情在足協理事改選時也有發生）</p>
 <p>當然，我個人比較黑心的想法是：<del>這些體育署官員，一不容易調職，二則專業無法被其他非專業公務員取代，三則在圈子內關係良好，未來退休後「發展無限」，我幹嘛拿石頭砸自己的腳，硬要去找這些「好麻吉」麻煩？</del></p>
 <p>種種不堪，也形成體育署常被笑稱為<strong>「單項運動協會在朱崙街的提款機」</strong>的原因了。</p>
