--- a/_posts/2021-08-13-VOCUS-余英時著作三種-陳寅恪-方以智和朱熹.html
+++ b/_posts/2021-08-13-VOCUS-余英時著作三種-陳寅恪-方以智和朱熹.html
@@ -10,41 +10,36 @@ author: 克敏
 
 <h2><strong>《陳寅恪晚年詩文釋證》</strong></h2>
 <p>明清之際出現的遺民和貳臣兩種群體：前者堅持不入清為仕，後者則任兩朝臣。是否入清與如何入清（遺民不世襲？），既是當時的討論焦點，也是內心掙扎。其中，也有如錢謙益（1582-1664）短暫入清為仕，沒過多久即離開，並以入仕為人生污點，懊惱於自己的懦弱，試圖回到明遺民位置者並加入反清。而其妻柳如是（1618-1664）則自始至終反對入清，被視為影響錢謙益離開清朝的重要原因。</p>
-<p>陳寅恪（1890-1969）晚年遭文化革命迫害，雖雙眼失明，仍留下《柳如是別傳》。他以錢謙益和柳如是留下的詩文，以史箋詩，勾勒兩人的內心圖像。作為民初清華國學院四大導師之一（另三人是王國維、梁啟超和趙元任），為何晚年會對柳如是感興趣？余英時認為這是陳寅恪以自己和其夫人（選擇留在轉變成中華人民共和國的政府，以及似乎希望留在國民政府，遷往台灣的陳夫人），比作錢謙益和柳如是。&nbsp;</p>
-<blockquote>「在《柳如是別傳》這部晚年著作上，投入了全部生命和情感。如果其中沒有極深刻的切己之感，則這件事本身便成為完全不可理解了。」<br>
-</blockquote>
+<p>陳寅恪（1890-1969）晚年遭文化革命迫害，雖雙眼失明，仍留下《柳如是別傳》。他以錢謙益和柳如是留下的詩文，以史箋詩，勾勒兩人的內心圖像。作為民初清華國學院四大導師之一（另三人是王國維、梁啟超和趙元任），為何晚年會對柳如是感興趣？余英時認為這是陳寅恪以自己和其夫人（選擇留在轉變成中華人民共和國的政府，以及似乎希望留在國民政府，遷往台灣的陳夫人），比作錢謙益和柳如是。</p>
+<blockquote>「在《柳如是別傳》這部晚年著作上，投入了全部生命和情感。如果其中沒有極深刻的切己之感，則這件事本身便成為完全不可理解了。」</blockquote>
 <p>效仿陳寅恪的做法，余英時《陳寅恪晚年詩文釋證》以陳寅恪之詩，解讀其晚年心境。錢謙益在清初必須隱晦的表達心志，而陳寅恪也其所處時代境遇亦然。</p>
 <p>以史箋詩在文學傳統裡不罕見，但應用在當代人，就必須面對當代的難題和兩岸情緒。在國民政府已知不堪，而新政權前景未知的情況下，陳寅恪選擇後者。但其晚年遭遇，也引發後續公案：是否後悔留在中華人民共和國，對中國共產黨的看法、晚年心境為何？</p>
 <p>清廷官方對錢謙益頗為怨恨，認為其已入清，卻又對清各種不滿。</p>
 <blockquote>「寅恪案，牧齋（錢謙益）之降清，乃其一生污點。但亦因其素性怯懦，迫於事勢所使然。若謂其必須始終心悅誠服，則甚不近情理。夫牧齋所踐之土，乃禹貢九州相承之土，所茹之毛，非女真八部所種之毛。館臣（指《四庫》館臣）阿媚世主之言，抑何可笑。回憶五六十年前，清廷公文，往往有食毛踐土，具有天良之語。今讀《提要》，又不勝桑海之感也。」<br>
-<br>
-根據我們上一節中對陳先生「考古證今」的史學風格的認識，這一段「桑海之感」毫無疑問是針對他自身和其他知識分子的處境而發。當時中共動不動就要知識分子向「黨」和「毛主席」感恩。陳先生所引「食毛踐土」之「毛」字尤屬畫龍點睛之筆。<br>
-</blockquote>
+根據我們上一節中對陳先生「考古證今」的史學風格的認識，這一段「桑海之感」毫無疑問是針對他自身和其他知識分子的處境而發。當時中共動不動就要知識分子向「黨」和「毛主席」感恩。陳先生所引「食毛踐土」之「毛」字尤屬畫龍點睛之筆。</blockquote>
 <p>其晚年詩文釋證，均導向另一個答案。</p>
+<img src="https://assets.matters.news/embed/221a9438-188a-402e-8661-a83a41a92531.jpeg" alt="原版成書於上世紀70年代。猶記得第一次閱讀時，根本不曉得錢謙益是誰，而陳寅恪只是個好像很有名的老人。許多年後，也是先看了《柳如是別傳》，才對陳寅恪感興趣，才又外延閱讀。2019年再版，買了一本留念，但被寄回家壓倉，只好挪用博客來展示照片。唔。可以去購買：https://www.books.com.tw/products/0010498447">
 <p>原版成書於上世紀70年代。猶記得第一次閱讀時，根本不曉得錢謙益是誰，而陳寅恪只是個好像很有名的老人。許多年後，也是先看了《柳如是別傳》，才對陳寅恪感興趣，才又外延閱讀。2019年再版，買了一本留念，但被寄回家壓倉，只好挪用博客來展示照片。唔。可以去購買：https://www.books.com.tw/products/0010498447</p>
 <h2><strong>《方以智晚節考》</strong></h2>
 <p>余英時同時期的著作《方以智晚節考》就直接以明清之際的方以智(1611-1671)為題。與錢謙益在明時已享有名聲不同，方以智最初當過小官，入清後成為和尚，又被清廷所捕，最後在押解路上病死。此書最有趣的不是晚節如何，而是死節考：他是怎麼死的？</p>
 <p>傳統史學一般相信越接近事發經過的文獻越可靠，余英時卻假設在當時的清朝氛圍中，最初的說法因有所顧忌而失實。當權者不能接受反政府者是因崇高道德的目的自殺，而會偏向描繪為其他理由，包括意外和病死。又從文獻，不見其有健康不佳之說，而清廷的確有避免重犯在羈押過程中病死的記錄。</p>
 <p>第二種可能的死亡方式，是其子方中履所說的自殺。雖然父子或有美化的可能，但父子關係也讓兩人同在一艘船，選擇激怒當權者不可能免罪，是以有其甘冒獲罪之說又可信度。又，方以智去世的地點惶恐灘，即是文天祥「惶恐灘頭說惶恐，歎伶仃洋裡歎伶仃。人生自古誰無死，留取丹青照汗青。」提及的地點，因為文天祥而別具文化意義，正適合遺民在此自殺（喂！）</p>
 <p>《方以智晚節考》成書於1972年。在史料受限下，已經是很精彩的爬梳。也有人稱之為推理小說。</p>
+<img src="https://assets.matters.news/embed/5ea47361-8896-4db9-8426-b442a36b23d8.jpeg" alt="因為方以智和其師父覺浪道盛複雜的思想見解，是不少學者想挑戰的對象，曾在不同著作見過好幾次方的名字。因不在守備範圍（翻了看不懂），一直沒有用心去理解（看了也不懂）。偶然在二手書店發現此書，才有那麼一點認識此人。覺得有趣，去翻方以智的莊子學著作《藥地炮莊》。唔，又閤起來了。 看的是簡體本。">
 <p>因為方以智和其師父覺浪道盛複雜的思想見解，是不少學者想挑戰的對象，曾在不同著作見過好幾次方的名字。因不在守備範圍（翻了看不懂），一直沒有用心去理解（看了也不懂）。偶然在二手書店發現此書，才有那麼一點認識此人。覺得有趣，去翻方以智的莊子學著作《藥地炮莊》。唔，又閤起來了。 看的是簡體本。</p>
 <h2><strong>《朱熹的歷史世界：宋代士大夫政治文化的研究》</strong></h2>
 <p>漢宣帝的「與我共治天下者其惟良二千石乎」是宋以前最常提到的「共治天下」。雖說是「共治」，但主體很明顯是皇帝。此書主張，宋代士人在「共治」裡，包含積極主動的面向。儒者，是擁有政治身份的儒者。</p>
 <p>乍看之下不奇怪，因為文官制度裡一定會有儒者。但是儒者卻未必是以儒者身份參與，尤其道學/理學強調的普遍道德原則，與政治並無必然相關。「內聖」並不是自然而然的會成為「外王」（也會將無法「外王」，歸咎於「內聖」價值不足），其中必須先假定「內聖」只是起點，而不是終點。「以天下為己任」成為宋代政治文化的特色，也不只是人人成就自身道德的獨善其身。</p>
-<blockquote>「無論『上接孔、孟』或形上系統都不是理學追求的終點，二者同是為秩序重建這一終極目的服務的。前者為這一秩序所提供的是經典依據，後者則是超越而永恆的保證。一言以蔽之，『上接孔、孟』和建立形上世界雖然重要，但在整個理學系統中卻只能是第二序的位置，第一序的身份則非秩序重建莫屬。」<br>
-</blockquote>
+<blockquote>「無論『上接孔、孟』或形上系統都不是理學追求的終點，二者同是為秩序重建這一終極目的服務的。前者為這一秩序所提供的是經典依據，後者則是超越而永恆的保證。一言以蔽之，『上接孔、孟』和建立形上世界雖然重要，但在整個理學系統中卻只能是第二序的位置，第一序的身份則非秩序重建莫屬。」</blockquote>
 <p>遂從理學裡的觀念史演變，以及士人的政治互動，重構當時理學集團、官僚集團和皇權組成的政治文化。</p>
-<blockquote>「問：『《大學》一書，皆以修身為本。正心、誠意、致知、格物皆為修身內事？』曰：『此四者成就那修身。修身推出，做許多事。』」《朱子語類》<br>
-</blockquote>
+<blockquote>「問：『《大學》一書，皆以修身為本。正心、誠意、致知、格物皆為修身內事？』曰：『此四者成就那修身。修身推出，做許多事。』」《朱子語類》</blockquote>
 <p>從前讀畢此書，對宋代士人和儒者大大改觀。只是余英時想重構的東西太大與複雜，不僅理學家常用相同的詞彙講著不同的概念而極為混淆（當代學者也有不同理解）、如何證明與解讀政治互動的關係等等，都引起不同學界大佬的質疑。不過這些事情留給專業讀者去處理即可。</p>
+<img src="https://assets.matters.news/embed/adc41021-c007-4b9d-91f6-4f4f03209257.jpeg" alt="因為圖書館的藏書不知被誰長期借閱（佔據），一怒（衝動）之下，買了學生可負荷的簡體版（而且是二手）。《朱熹的歷史世界》看的是此精裝版。如果讓我再選一次，我會在第一次檢索發現已被借出時就購買。然後，絕對不買精裝本。分兩冊的書幹嘛要合在一部！">
 <p>因為圖書館的藏書不知被誰長期借閱（佔據），一怒（衝動）之下，買了學生可負荷的簡體版（而且是二手）。《朱熹的歷史世界》看的是此精裝版。如果讓我再選一次，我會在第一次檢索發現已被借出時就購買。然後，絕對不買精裝本。分兩冊的書幹嘛要合在一部！</p>
 <h2><strong>題外</strong></h2>
 <p>在三聯書店出的余英時系列總序裡，作者余英時有幾段話蠻符合我對他的印象：</p>
 <blockquote>「我自早年進入史學領域之後，便有一個構想，即在西方（主要是西歐）文化系統對照之下，怎樣去認識中國文化傳統的特色。」<br>
-<br>
 「我雖然帶著尋找文化特色的問題進入中國史研究的領域，但在史學的實踐中，這個問題卻只能作為研究工作的一個基本預設，而不能也不必隨時隨地要求任何專題研究都直接對它提出具體的解答。」<br>
-<br>
-「（傳統）和許多現代的價值與觀念不但相激相蕩，而且也相輔相成。於是構成了20世紀中國文化史上十分緊要然而也十分奇詭的一個向度。正是根據這一預設，我才偶爾涉筆及於20世紀的思想流變和文化動態。」<br>
-</blockquote>
+「（傳統）和許多現代的價值與觀念不但相激相蕩，而且也相輔相成。於是構成了20世紀中國文化史上十分緊要然而也十分奇詭的一個向度。正是根據這一預設，我才偶爾涉筆及於20世紀的思想流變和文化動態。」</blockquote>
 <p>但讀余英時的著作，以及晚期以公共知識分子身份的投書談台灣、香港和中國，就會對於上述啟發自五四的文字有不同想法。學者一方面對中國史和文化抱有高度熱忱，另一方面對當代中國維持距離。</p>
 <p>雖然讀過余英時不少著作，但對其人如何，一直沒有深究，而只是從其文推其人。這三本是首先浮出腦海的著作，原本沒有特別挑選，似乎也有某些相連的關係。可能是作者，也可能是我。</p>
