--- a/_posts/2021-08-26-VOCUS-媒體記者如何毀掉一個好問題-中央疫情記者會毒癮者打疫苗提問事件.html
+++ b/_posts/2021-08-26-VOCUS-媒體記者如何毀掉一個好問題-中央疫情記者會毒癮者打疫苗提問事件.html
@@ -10,39 +10,33 @@ author: 阿肯
 
 <p>話說，從去年二月開始，我們已經幾乎習慣了每天下午兩點的「中央流行疫情指揮中心嚴重特殊傳染性肺炎記者會」（後面我會簡稱為中央疫情記者會，與地方疫情記者會做區隔）。而在過程中民眾的關注與討論焦點，除了每天的確診人數外，另一個就是記者會現場，媒體記者與疫情指揮中心的問答。</p>
 <p>當然，在這部分，相信在記者會中提問的媒體記者，也從未讓台灣民眾對他們<del>「失望」</del>過。甚至有某些<a href="https://www.facebook.com/jameshseih2021/photos/pcb.123622859951803/123622149951874/">網友還透過改圖</a>諷刺每天媒體記者的提問。</p>
-<p><br></p>
+<img src="https://images.vocus.cc/70aace35-7e00-4336-aa67-62c517cb7a9e.jpg">
 <p><strong>而在 2021/8/23 高端疫苗開始施打後，就有傳出某位毒癮犯者，在施打疫苗後隔天上午施打毒品，中午就過世的事件。理所當然的，這個事件也有記者在中央疫情記者會中對指揮中心進行提問。</strong></p>
 <p>但是，現場進行提問的媒體記者顯然毀掉了一個很好的問題。</p>
-<figure>E</figure>
+<h3><a href="https://www.mirrormedia.mg/story/20210825edi045/">【接種國產高端】記者提「籲藥癮者暫緩接種防猝死」　陳時中神回：應叫他別吸毒</a></h3><span>國產高端疫苗23日開打，開打進入第三日目前出現4例死亡時間與打疫苗日期相近之案例，分別為於桃園接種的陸姓網路作家、44歲桃園溫姓男子、40多歲基隆女子和39歲新北彭姓男子。其中39歲的彭男23日接種疫苗後，昨（24日）被發現昏倒在浴室，送醫後宣告不治，並被查出有多次吸毒的前科。對此，今（25日）中央流行疫情記者會上，有記者就詢問指揮官陳時中是否會呼籲吸毒者暫緩接種疫苗，陳時中則神回：「應該要...</span><img src="https://www.mirrormedia.com.tw/assets/images/20210825170302-57c16976fd45962253588f4cd03abb63-tablet.jpg">
 <p>在這阿肯引用媒體報導內容如下：</p>
 <p>國產高端疫苗23日開打，開打進入第三日目前出現4例死亡時間與打疫苗日期相近之案例⋯⋯其中39歲的彭男23日接種疫苗後，昨（24日）被發現昏倒在浴室，送醫後宣告不治，並被查出有多次吸毒的前科。<strong>對此，今（25日）中央流行疫情記者會上，有記者就詢問指揮官陳時中是否會呼籲吸毒者暫緩接種疫苗，陳時中則神回：「應該要呼籲大家不要吸毒。」</strong></p>
 <h3>為何我說這記者毀了一個好問題呢？而這個問題又該怎麼問呢？</h3>
 <p>首先，以 UX 教學的過程，當我講到問卷調查或者是訪談時，我常會用編寫程式的概念 <a href="https://zh.wikipedia.org/zh-tw/%E5%9E%83%E5%9C%BE%E8%BF%9B%EF%BC%8C%E5%9E%83%E5%9C%BE%E5%87%BA"><strong>“Garbage in, garbage out”</strong></a><strong> </strong>當作給學員的重點提醒之一。</p>
-<p>我的意思是，如果你在進行訪談時的提問毫無意義，你得到的回答也多半是毫無意義的，一點參考價值都沒有。而這次記者的提問顯然並沒有注意到這個問題。<del>當然，我相信應該有不少人想問提問的記者是哪家媒體的，但這不是今天的重點。&nbsp;</del></p>
+<p>我的意思是，如果你在進行訪談時的提問毫無意義，你得到的回答也多半是毫無意義的，一點參考價值都沒有。而這次記者的提問顯然並沒有注意到這個問題。<del>當然，我相信應該有不少人想問提問的記者是哪家媒體的，但這不是今天的重點。</del></p>
 <p><strong>那麼，這個問題該怎麼問呢？</strong></p>
 <p>以我的觀點來說，如果把這個問題拆分成兩個部分，並且加上正面明確的敘述，這個提問應該會得到不錯的結果。那麼就讓我們時空倒流到 8/25 的中央防疫記者會現場，並且讓阿肯的超靈體「附身合體」到這位提問的記者身上吧！<del>（喔咿這是什麼通靈王梗啊）</del></p>
 <p>中央防疫記者會現場，<del>阿肯附身</del>記者提問：</p>
 <p>「部長不好意思，昨天有一例施打高端疫苗後的死亡案例，該案例目前知道疑似有藥癮與施打毒品的狀況。<br>
-<br>
 當然我們知道吸毒絕對不應該，但因為在目前可能有某些即將要施打疫苗的民眾可能因為接受治療，必要使用與毒品類似成分，例如嗎啡之類⋯⋯的藥物，那如果類似這種例子要施打高端疫苗的話，依照過去國外施打其他疫苗的經驗，指揮中心這邊是否有收集相關的資訊，或者是明確的指引？<br>
-<br>
 另外，某些正在戒毒與戒除藥物使用過量的民眾，在施打疫苗時，是否也有需要注意的地方？這部分也麻煩請指揮中心做說明。」</p>
 <p>好，<del>靈體脫離，回到現在。（到底想玩通靈王梗多久！）</del>讓阿肯來解釋一下我的提問方式背後的脈絡，以及我如何拆解問題，以盡可能獲得正面的答案。</p>
-<p><br></p>
 <p>首先，一個很重要的概念是，施打毒品與藥物使用過量，是絕對不能被合理化的。不管是在社會道德面、法律面與健康都是無法接受的。所以在提問時，必須先把針對該死亡案例的背景因素先快速闡述，讓問題焦點不會跑歪掉。</p>
 <p>接下來，因為雖然是個案，但也可能有某些類似的個案，是因為不得不為的因素，比如說接受治療中必須透過特定藥物加強止痛，又或者是因為某些疾病的治療過程中需要使用與毒品類似成分的藥物等，這些特例未來也可能要接種武漢肺炎疫苗。</p>
 <p>因為高端也才剛開始進行施打，對於類似特例的狀況可能並不會有足夠的案例數據支持，此時提問的方向就會需要擴大到其他疫苗在其他國家施打時，是否也有類似個案施打疫苗時產生不良反應，以及需要如何因應。</p>
 <p>若指揮中心有所準備，相信會提供其他國家在施打疫苗時碰到這種特殊案例的相關經驗，就算沒有，也會變成未來可能需要持續追蹤的狀況，這議題未來就可以持續被追蹤下去。</p>
 <p>當然另外一個面向是，如果有藥物成癮或者吸毒的民眾（欸拜託真的不要），看到了指揮中心的回答，也會思考目前身體的狀況是否該施打疫苗，或者採取比較保守的防疫措施。畢竟，雖然是極少數，但施打任何疫苗都可能產生特定風險。</p>
-<p><br></p>
 <p>接下來的第二個問題，背後的脈絡是，某些正在戒毒或者藥物過量的民眾，他們可能會在意自己身體所殘留的毒品或藥物成分，在施打疫苗後仍然可能會引發不良反應，此時對於這些人來說，當類似的死亡案例產生時，就會反射到自身的情境，開始擔心害怕施打疫苗後對自己的影響。</p>
 <p>若能夠請指揮中心正面回應類似個案民眾可以參考的應對指引，相對對於這些可能會面對類似狀況的民眾來說，也會比較安心。就算目前沒有，也跟前一題一樣，可以變成之後相對可以持續追蹤的議題。</p>
-<p><br></p>
 <p>當然，我相信沒有一個媒體記者，想要讓自己變成記者會當天被人討論的「笑話」，既然如此，我相信在記者會前，做好充足的準備進行提問，想辦法讓問題問對，才能真正幫助觀看記者會與報導的民眾瞭解正確的資訊。也才能夠達到媒體應當發揮的作用。</p>
 <p><del>但某些特定媒體我是毫不抱有期待就是了啦⋯⋯唉。</del></p>
 <h3>後記：</h3>
 <p>昨天阿肯發了這篇文章後，獲得各位好朋友的支持，讓這篇文章增加了不少流量。但也因此，我看到某媒體記者對於本文有些指教。在此，阿肯透過以下的文章回應，也請各位朋友與媒體記者朋友多多指教。</p>
-<figure>E</figure>
-<p><br></p>
+<h3><a href="https://vocus.cc/article/612777d0fd8978000122f3fc">對於得到明確答案，我們的目標是一致的 - 回應某媒體記者對阿肯的指教｜方格子 vocus</a></h3><span>昨天發了一篇名為「媒體記者如何毀掉一個好問題：中央疫情記者會毒癮者打疫苗提問事件」的文章，也感謝各位好朋友的支持，讓這篇文章增加了不少流量。但也因此，我看到某媒體記者對於本文有些指教。在此想要向該媒體記者做些回應。 媒體現象, 武漢肺炎, 提問引導, 指揮中心記者會, 高端疫苗, 媒體, 記者, 記者會, 專業, 文章, 施打疫苗, 指揮中心, 個案, 中央疫情指揮中心, 民眾</span><img src="https://images.vocus.cc/67032141-ab48-4b32-bb6b-9eb493cb89c3.jpg">
 <h3>文末，寫給近期的訂閱者與追蹤者：</h3>
 <p>首先要感謝近期開始追蹤與付費訂閱我的朋友，你們的每一個追蹤跟訂閱，甚至是抖內，對阿肯來說都是正面的肯定。但有些醜話必須說在前面，因為阿肯並不是一個量產型的寫手，甚至偶爾心血來潮會開始寫文，但情緒中途被打斷就會把文章放置 Play，所以，對於訂閱者來說真的很不好意思。如果沒有辦法接受阿肯的文章產量，雖然覺得可惜，但阿肯可以接受你們收回付費的訂閱，在這邊先跟訂閱者說聲謝謝，以及不好意思。((鞠躬</p>
