--- a/_posts/2021-08-26-VOCUS-對於得到明確答案-我們的目標是一致的-回應某媒體記者對阿肯的指教.html
+++ b/_posts/2021-08-26-VOCUS-對於得到明確答案-我們的目標是一致的-回應某媒體記者對阿肯的指教.html
@@ -9,7 +9,7 @@ author: 阿肯
 ---
 
 <p>昨天阿肯發了一篇名為「媒體記者如何毀掉一個好問題：中央疫情記者會毒癮者打疫苗提問事件」的文章，也感謝各位好朋友的支持，讓這篇文章增加了不少流量。但也因此，我看到某媒體記者對於本文有些指教。在此想要做些回應。</p>
-<figure>E</figure>
+<h3><a href="https://vocus.cc/article/6126602afd8978000150990b">媒體記者如何毀掉一個好問題：中央疫情記者會毒癮者打疫苗提問事件｜方格子 vocus</a></h3><span>我相信沒有一個媒體記者，想要讓自己變成記者會當天被人討論的「笑話」，既然如此，我相信在記者會前，做好充足的準備進行提問，想辦法讓問題問對，才能真正幫助觀看記者會與報導的民眾瞭解正確的資訊。也才能夠達到媒體應當發揮的作用。 指揮中心記者會, 高端疫苗, 提問引導, 使用者體驗, 武漢肺炎, 記者會, 施打疫苗, 記者, 指揮中心, 死亡案例, 媒體, 藥物, 施打, 民眾, 高端疫苗</span><img src="https://images.vocus.cc/964a069f-bd43-4d49-a636-77f3d6862e53.jpg">
 <h3>向媒體朋友致歉，請理解，我們想得到明確答案的目標是一致的</h3>
 <p>首先，雖然我的文章中並沒有提到「蠢問題」三個字，但是也許是因為我引用的截圖，讓媒體記者感到被冒犯，在此向記者朋友致上最深的歉意，我也會更換掉這張截圖。</p>
 <p>但是我必須說，如果媒體記者朋友「很在意」自己的形象被扭曲污蔑，那就更必須把自己的專業價值展現出來。</p>
@@ -18,16 +18,14 @@ author: 阿肯
 <h3>對我來說，一個好問題就真的這樣被毀掉了。</h3>
 <p>我相信對我，對台灣民眾，以及對於在現場的媒體記者來說，一定會很想知道，對於某些有藥癮的或類似問題的民眾，如果目前已經有一個「疑似施打疫苗致死」的個案，未來如果面對同樣狀況的潛藏個案，指揮中心會如何應對。這點，相信我的出發點跟立場，一定跟媒體朋友們相同。這點也希望該位對我文章進行評論的媒體記者朋友能夠理解。</p>
 <p><strong>事實上，記者會當天陳時中部長的回答我很不滿意。因為他並沒有明確的回覆，未來面對類似個案時，政府會以什麼方式進行處置，以及相對的責任歸屬。</strong></p>
-<figure>E</figure>
+<h3><a href="https://www.mirrormedia.mg/story/20210825edi045/">【接種國產高端】記者提「籲藥癮者暫緩接種防猝死」　陳時中神回：應叫他別吸毒</a></h3><span>國產高端疫苗23日開打，開打進入第三日目前出現4例死亡時間與打疫苗日期相近之案例，分別為於桃園接種的陸姓網路作家、44歲桃園溫姓男子、40多歲基隆女子和39歲新北彭姓男子。其中39歲的彭男23日接種疫苗後，昨（24日）被發現昏倒在浴室，送醫後宣告不治，並被查出有多次吸毒的前科。對此，今（25日）中央流行疫情記者會上，有記者就詢問指揮官陳時中是否會呼籲吸毒者暫緩接種疫苗，陳時中則神回：「應該要...</span><img src="https://www.mirrormedia.com.tw/assets/images/20210825170302-57c16976fd45962253588f4cd03abb63-tablet.jpg">
 <p>但是，當下的提問方式，的確會讓陳部長「閃過」了這個問題，就算可能在這個議題背後，有藥癮個案的應對問題，有中央疫情指揮中心對於未來類似個案的處置問題，以及責任歸屬問題等⋯⋯但在當下的提問與回答之後，就沒有任何媒體繼續追問，也無法在現場得到任何真正的答案。一切都在尷尬的停頓中結束。</p>
 <p>那麼，我想我也解釋完在前文會說<strong>「毀掉一個好問題」</strong>的背後脈絡了。</p>
 <h3>記者會分秒必爭，提問方式更需要展現媒體記者專業</h3>
 <p>再者，我清楚記者會提問需要分秒必爭，而我的提問方式，的確可能過於冗長。畢竟在做訪談與記者會提問，是不一樣的。</p>
 <p>我的提問是這樣的。</p>
-<p>「部長不好意思，昨天有一例施打高端疫苗後的死亡案例，該案例目前知道疑似有藥癮與施打毒品的狀況。 &nbsp;<br>
-<br>
-當然我們知道吸毒絕對不應該，但因為在目前可能有某些即將要施打疫苗的民眾可能因為接受治療，必要使用與毒品類似成分，例如嗎啡之類⋯⋯的藥物，那如果類似這種例子要施打高端疫苗的話，依照過去國外施打其他疫苗的經驗，指揮中心這邊是否有收集相關的資訊，或者是明確的指引？ &nbsp;<br>
-<br>
+<p>「部長不好意思，昨天有一例施打高端疫苗後的死亡案例，該案例目前知道疑似有藥癮與施打毒品的狀況。<br>
+當然我們知道吸毒絕對不應該，但因為在目前可能有某些即將要施打疫苗的民眾可能因為接受治療，必要使用與毒品類似成分，例如嗎啡之類⋯⋯的藥物，那如果類似這種例子要施打高端疫苗的話，依照過去國外施打其他疫苗的經驗，指揮中心這邊是否有收集相關的資訊，或者是明確的指引？<br>
 另外，某些正在戒毒與戒除藥物使用過量的民眾，在施打疫苗時，是否也有需要注意的地方？這部分也麻煩請指揮中心做說明。」</p>
 <p>那我也相信，以我所提出的提問脈絡，依照媒體記者的專業能力，絕對能夠在同樣脈絡下以更短的時間消化問題進行提問，並且追求相同的目的。但在當天記者會的現場，非常遺憾的，我們並沒有看到媒體記者有如此的表現。</p>
 <h3>接下來回答「我們知道吸毒絕不應該」這句話的背後脈絡。</h3>
