--- a/_posts/2022-03-01-VOCUS-看電影-素還真-非霹靂影迷的觀影體驗.html
+++ b/_posts/2022-03-01-VOCUS-看電影-素還真-非霹靂影迷的觀影體驗.html
@@ -8,6 +8,7 @@ tags: blog
 author: 天涯一方草
 ---
 
+<img src="https://images.vocus.cc/f1002814-1c1e-4338-8ebd-5570cf52675c.jpg" alt="《素還真》電影海報">
 <p>《素還真》電影海報</p>
 <p>作為一名八年級生，我對霹靂布袋戲的認識全都來自父輩的耳濡目染，「素還真」的大名更是如雷貫耳。不過，之所以選擇進影院觀賞，不只是為了支持臺灣戲偶作品，更多的也是好奇這位「霹靂一哥」究竟有何魅力，讓我父親願意從錄影帶時期便持續「追劇」至今？</p>
 <p><strong>友善提醒，下面內容有雷，請斟酌觀看。</strong></p>
@@ -45,6 +46,7 @@ author: 天涯一方草
 <p>能教出未來「清香白蓮」的八趾麒麟，為證明素還真醫術高超，不可能醫死寰宇堡堡主，竟答應副堡主的條件，主動負傷、再讓徒弟醫治一次！<br>
 就連徒弟都曉得要開棺驗屍，師父居然會選擇一條自損一千，傷敵幾乎沒有的辦法，這真的合理嗎？</p>
 <p>更不用說，這對師徒無論面對何種危險、通緝，都只會跑回同一居住地的舉動，實在讓人不忍卒睹。</p>
+<img src="https://images.vocus.cc/2379c910-6673-4e21-8874-22d79d35f42f.jpg" alt="圖片取自網路">
 <p>圖片取自網路</p>
 <p>我理解片場搭景不易，但這對師徒每遇劫難必回同一地點（三生居）躲藏，反派抓不到人也難呀！</p>
 <p>再者，片尾彩蛋出現的素還真師弟談無慾，一上場就要「五山統領」之位，這舉動也令我愕然——</p>
