--- a/_posts/2022-08-30-VOCUS-中學以下的素養教育與經驗談-國二下自然科-力與壓力-2.html
+++ b/_posts/2022-08-30-VOCUS-中學以下的素養教育與經驗談-國二下自然科-力與壓力-2.html
@@ -17,7 +17,6 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">沒有百分百適用，也不會有一招行天下的密技，最大差異在於針對個人或是多人數上課。而且不管多好的教材，只要學生本身完全沒有學習的意願，都是沒有用的，這時候就得要換其他方式，不能只看教材與方式。</div>
 <blockquote class="draft-block draft--blockquote">國二下自然最後，也是國中最大的關卡，沒有之一。就是第六章：力。因為，這關通過的人，大部分國三的牛頓運動學也就還好。過不了的人，筆者沒見過國三的<a href="https://zh.m.wikipedia.org/zh-tw/%E8%BF%90%E5%8A%A8%E5%AD%A6" target="_blank" class="draft--a">運動學</a>能活得下去。物理到這邊開始有累積的效應出現，力學入門沒弄好，直接讓國三接上的運動學倒掉，功與能就甭談。</blockquote>
 <div><h3><a href="https://vocus.cc/article/63052ad7fd897800019f1da1">中學以下的素養教育與經驗談：國二下自然科，力與壓力｜方格子 vocus</a></h3><span>每篇都要再次說明，所有的教學方法與手段，完全要看： 沒有百分百適用，也不會有一招行天下的密技，最大差異在於針對個人或是多人數上課。而且不管多好的教材，只要學生本身完全沒有學習的意願，都是沒有用的，這時候就得要換其他方式，不能只看教材與方式。 ...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252Ff18a7db8-6db3-4411-a0b6-ccbe056a936e.jpg%26width%3D1200%26sign%3DYEbsgkWImh6KEwnVnIN8NNMTa561uFLEdqcTArYj-JI&amp;width=550&amp;sign=iBco3bSEkUQZvKt_lDuOwdxQzzNrK661ngLEBDsZYLQ"></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-78qi">壓力</h2>
 <div class="draft-block draft--p left">呃，很妙的章節，因為中學講授的部分真的不多，謹記公式就是：</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/0675e706-1252-4880-bdee-9ff5d20d8d65.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
@@ -52,5 +51,5 @@ author: 王立第二戰研所
 <blockquote class="draft-block draft--blockquote">「想像左右兩邊都有很多在用力下壓，油的那一邊力氣小，所以需要比較多人去壓，才能跟左邊的水一樣。」</blockquote>
 <div class="draft-block draft--p left">也就是先把密度小的液體重量也少一點，所以下壓的力量較小的概念說明白，給予雖然不大對，但可以具象化的方式讓學生懂。懂了之後再帶數字算一次，個人經驗是可以讓懂的人變多一些。</div>
 <div class="draft-block draft--p left">由於108課綱把複雜的東西都拿掉了，大氣壓力在這邊也簡化許多，要注意的點在托里切利實驗，真空狀態下的水銀面相對高度為76cm，稱這高度為一大氣壓，這不背不會知道。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/o__x4-Zu2T4"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/o__x4-Zu2T4"></iframe></div>
 <div class="draft-block draft--p left">題型講的少，主要理由是變化太多，所以若把相對有關的都拿出來解，這不如買參考書看詳解。筆者認為，這邊的教學功力高低，要看怎麼觀察學生的反應去隨機應變，力的單元中，很難用一套萬用教法教到底。</div>
