--- a/_posts/2022-08-31-VOCUS-數碼寶貝絕境求生-黑與白的羈絆.html
+++ b/_posts/2022-08-31-VOCUS-數碼寶貝絕境求生-黑與白的羈絆.html
@@ -46,4 +46,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">在故事的安排上，除了有著多重結局的設定，隨著角色好感度的選項和主角三種不同選項的模式下，數碼寶貝的進化型態跟故事發展也會不一樣，這點我覺得在劇本上是有用心的安排，只是在人物的性格和進化的契機，除了初期有因為特殊事件下的故事觸發進化外，之後就變得非常潦草帶過，並且越到後面故事就越不吸引人這點，讓就算是玩出好結局也會讓人覺得終於結束的感覺。</div>
 <div class="draft-block draft--p left">簡單來說《數碼寶貝絕境求生》這款遊戲，戰鬥模式實在是無可避免的最大問題，其二一堆如自由戰鬥抓怪、培育模式更是變成可有可無，因為根據劇情來說整個戰鬥跟故事發展幾乎不會卡關跟需要特別提升戰力的狀況。</div>
 <div class="draft-block draft--p left">而唯一較細緻的故事選項中，雖然加強了寫實與黑化的部分，但仔細想想是否有必要在一個原本都很正向的數碼系列中帶出人會死亡這點？是滿值得探討的地方。是否數碼寶貝在整體玩家年齡方向，有越來越成人化的趨勢考量。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/4d6mKKZdfCY"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/4d6mKKZdfCY"></iframe></div>
