--- a/_posts/2021-02-24-VOCUS-圖地-臺灣人口成長-泡泡地圖解析.html
+++ b/_posts/2021-02-24-VOCUS-圖地-臺灣人口成長-泡泡地圖解析.html
@@ -10,15 +10,18 @@ author: 第六星球
 
 <p>在前一篇文章裡面，我們看到臺灣人口負成長的趨勢，也看見各地區「成長率」的變化。</p>
 <p>不過，我們在關注人口變遷時，除了要看「變化率」之外，還要注意「變化數量」。為什麼呢？因為人口比較少的鄉鎮，只要增加一些些人，成長率就會衝得很高。這時候就需要透過「數量」來更具體看見人口數量的變化。</p>
-<figure>E</figure>
+<h3><a href="https://vocus.cc/tode/60150a7afd89780001319130">圖地︱臺灣人口首次負成長．地圖全解析｜方格子 vocus</a></h3>
+<span>你知道嗎？去年台灣人口負成長！ 2020年一整年，台灣人口從年初的2360萬人下降至年底的2356萬人，成長率 -0.18%。這是台灣二戰以來第一次全年人口負成長，而且自然增加和社會增加雙雙都負成長。 人口, 圖地, 地圖, 圖表, 台灣, 負成長, 人口, 台灣人, 增加, 2020年, 成長率, 地圖, 減少, 死亡人數, 自然</span><img src="https://images.vocus.cc/cbf6c8f0-e3bf-47c2-acc0-f14101115b4b.jpg">
 <p>所以，我做了人口成長的泡泡地圖。泡泡的大小呈現「人口數量變化」。紅色表示人口增加，藍色表示人口減少。下面就來看看這些地圖吧！</p>
+<img src="https://images.vocus.cc/cdb7631c-fe54-490b-90d3-a070dee4a7ac.jpg" alt="2020台灣人口成長地圖">
 <p>2020台灣人口成長地圖</p>
+<img src="https://images.vocus.cc/7ed31fbb-9e30-40f5-ab59-7e749bfe4c96.jpg" alt="2020台灣人口增加地圖">
 <p>2020台灣人口增加地圖</p>
 <p>我們可以發現，從淡水、林口，到桃園、新竹一帶有非常多紅色的泡泡，表示這裡的人口增加非常多。台中市、台南市、高雄市的郊區也都有人口增加的趨勢。南科附近的新市善化也特別顯眼。值得一提的是，雲林麥寮在工業區和社會福利的加持下，人口持續高度成長。</p>
+<img src="https://images.vocus.cc/9cbc84d2-5dfc-4e28-9539-34699ac26d54.jpg" alt="2020台灣人口減少地圖">
 <p>2020台灣人口減少地圖</p>
 <p>從圖上可以看到，人口減少是全國各地的普遍狀態。 台北市有很多超大的藍色泡泡擠在一起，代表台北市的人口大量減少。事實上，人口減少數量前十名的鄉鎮市區，全部都在台北市。高雄市也是另一個人口遽減的城市。</p>
-<p><br></p>
-<blockquote>&nbsp;資料來源</blockquote>
+<blockquote>資料來源</blockquote>
 <ul>
   <li><a href="https://www.moi.gov.tw/cp.aspx?n=5590">內政部 統計報告</a></li>
 </ul>
