--- a/_posts/2021-06-06-VOCUS-圖地-發電廠地圖.html
+++ b/_posts/2021-06-06-VOCUS-圖地-發電廠地圖.html
@@ -9,7 +9,7 @@ author: 第六星球
 ---
 
 <p>前幾週興達電廠因為人為疏失，而跳機停止供電，導致全台各地大停電。不過許多人收到警示簡訊的第一個反應可能是，興達電廠在哪裡啊？讓我們來看看台灣主要發電廠的地圖～</p>
-<p><br></p>
+<img src="https://images.vocus.cc/1f02fe2b-be7c-40b9-9545-a764b03276c3.jpg">
 <p>興達電廠是台灣第三大電廠，燃煤與燃氣都有。2020年的供電量佔9.9%，也是南台灣最重要的電廠。</p>
 <p>還記得2017年的大停電嗎？當時出問題的是北部最大電廠桃園大潭電廠。因為中油把天然氣輸送管關起來，導致電廠沒氣可燒。然後經濟部長就下台一鞠躬。</p>
 <p>2020年全台灣發電量最大的電廠：大潭電廠冠軍，台中火力發電廠居次，興達電廠第三。這三座電廠供應全國30%以上的電力。大潭也正在持續擴建中...</p>
