--- a/_posts/2021-12-06-VOCUS-回顧-我們的行為是怎樣被設計的-世界閱讀日五本好書推薦.html
+++ b/_posts/2021-12-06-VOCUS-回顧-我們的行為是怎樣被設計的-世界閱讀日五本好書推薦.html
@@ -11,24 +11,24 @@ author: 阿肯
 <p>在 04/23「世界閱讀日」時，我推薦了五本自己認為獲益良多的書，給身邊的朋友，在此也同時紀錄與重新編輯，分享給方格子的讀者，希望對各位有所幫助。</p>
 <p>今天是 0423 世界閱讀日，阿肯也趁著這個機會「曬書」，把我自己覺得獲益良多的設計思考好書推薦給各位朋友，也希望這五本書對各位未來從事設計相關工作，能夠有所幫助。</p>
 <h3>1. Google 必修的圖表簡報術</h3>
-<figure>E</figure>
+<h3><a href="https://lihi1.com/DMw4k">Google必修的圖表簡報術（修訂版）：Google總監首度公開絕活，教你做對圖表、說對話，所有人都聽你的！ 電子書 by 柯爾．諾瑟鮑姆．娜菲克 Cole Nussbaumer Knaflic - Rakuten Kobo</a></h3><span>在 Kobo 閱讀 柯爾．諾瑟鮑姆．娜菲克 Cole Nussbaumer Knaflic 的 《Google必修的圖表簡報術（修訂版）：Google總監首度公開絕活，教你做對圖表、說對話，所有人都聽你的！》。★年度商管書總冠軍、Amazon簡報類長踞no.1★ ★修訂版＋練習本，重磅回歸簡報講台★ 「柯爾來拯救大家脫離爛PPT了！」 --Google前人力營運部資深副總裁狂推 Google最熱門內部訓練，摩根大通、比爾蓋茲基金會搶著學！ 　　現...</span><img src="https://kbimages1-a.akamaihd.net/ded293d0-c180-4783-b8f9-3e598499ea1d/1200/1200/False/google-google-2.jpg">
 <p>我會推薦這本書的原因是，本書講述了很多有關於如何理解資訊與分析資訊，進而透過合理的方式讓資訊能夠讓閱讀者理解的過程。尤其是在「資訊簡化」與「資訊強調」的部分，透過很多的實務舉例，讓想要從事資訊分析與介面設計的工作者學到不少有用的執行方法。</p>
 <h3>2. 思考的藝術：52 個非受迫性的思考錯誤</h3>
-<figure>E</figure>
+<h3><a href="https://lihi1.com/wfncA">思考的藝術：52 個非受迫性思考錯誤 電子書 by 魯爾夫．杜伯里(Rolf Dobelli) - Rakuten Kobo</a></h3><span>在 Kobo 閱讀 魯爾夫．杜伯里(Rolf Dobelli) 的 《思考的藝術：52 個非受迫性思考錯誤》。◆德國率先擊敗《賈伯斯傳》的著作，《黑天鵝效應》作者納西姆．塔雷伯鼎力推薦 ◆蟬聯《明鏡週刊》排行榜4週冠軍，連續48週Top 5，出版至今，暢銷地位遙遙不墜 ◆德國亞馬遜思考學習類Top1、心理勵志類Top3 ◆13國版權售出，全德銷量突...</span><img src="https://kbimages1-a.akamaihd.net/358bfab6-c339-4e9b-8acb-ef35577c1f65/1200/1200/False/64W5BTXusjie9V3ESaybiw.jpg">
 <p>過去從事設計工作時，我常會在理解業主或者使用者需求時，碰到一些自以為可行實際上卻不行的狀況。後來看了這本書之後，我就會更細心的去分析我現在面對的問題背後的問題是什麼，以及避免自己踩到一些在跟關鍵角色溝通時會碰到的誤區。如果想走 UX 工作的朋友，我非常建議你們把這本書拿來當作是自己學習使用者洞察的教科書。</p>
 <h3>3. 圖解思考設計</h3>
-<figure>E</figure>
+<h3><a href="https://www.kobo.com/tw/zh/ebook/NhIGT5LczjaFCDvZ_DtpAQ">圖解設計思考 2 進擊的使用者 電子書 by 艾琳．路佩登(Ellen Lupton) - Rakuten Kobo</a></h3><span>在 Kobo 閱讀 艾琳．路佩登(Ellen Lupton) 的 《圖解設計思考 2 進擊的使用者 Beautiful Users-designing for people》。我們正走向更全面性的設計觀，它將會為更多的個人、社群、與世界帶來衝擊。──比爾‧摩格里吉 誰是未來的使用者？ 隱藏在「可用性」之後的是什麼﹖ 難道不是所有的設計都是以使用者為中心的嗎﹖ 「設計者」，儘管歷史多所曲折，不會再以美感為主要考量。...</span><img src="https://kbimages1-a.akamaihd.net/e5c780f9-456b-422e-8c58-ac945d1e2160/1200/1200/False/NhIGT5LczjaFCDvZ_DtpAQ.jpg">
 <p>這本書說真的算是我備而不用的工具書，但是裡面有關於一些關於設計思考的方法論還蠻有趣的，如果遇到團隊創意枯竭或者碰到某些問題一直撞牆撞不過去的時候，可以考慮採取這本書裡面的一些方法來嘗試看看，也許會也不同的新發現。</p>
 <h3>4. 我們的行為是怎樣被設計的</h3>
-<figure>E</figure>
+<h3><a href="https://lihi1.com/IKYuu">我們的行為是怎樣被設計的 電子書 by 匡山（Cliff Kuang） - Rakuten Kobo</a></h3><span>在 Kobo 閱讀 匡山（Cliff Kuang） 的 《我們的行為是怎樣被設計的 友善設計如何改變人類的娛樂、生活與工作方式User Friendly: How the Hidden Rules of Design Are Changing the Way We Live, Work, and Play》。亞馬遜每月最佳選書、分類榜第一名 《Fortune財星》年度選書 《出版人週刊》《紐約時報書評》《Wired連線》 推薦書 友善設計思維大揭密 為什麼機器比你更懂你自己 Airbnb共同創辦人　喬．傑比亞（Joe Gebbia） IDEO設...</span><img src="https://kbimages1-a.akamaihd.net/3c443a50-e900-4ec6-84c3-9e9d7bc27e3f/1200/1200/False/1I7XCd64-DeshmbKS52U4w.jpg">
 <p>使用者與介面、服務之間到底是怎麼互動的呢？而使用者會在什麼時候開始依賴介面或服務所提供的資訊，逐步地往服務設計者想要達到的目的前進？這本書提到的不少例子，可以提供想要從事 UX 或 UI 設計工作的朋友細細品嚐。</p>
 <p>書中引用了不少對於現今社會生活的我們非常熟悉的科技與數位體驗，比如自駕車的設計背後帶來的真正價值，迪士尼如何透過數位手環啟動更符合遊客需求的體驗，以及社群的鉤癮效應如何讓我們持續黏著，但也影響我們的生活與認知等。</p>
 <p>建議看這本書的時候，盡可能一次讀完一個篇章，然後回頭想想書中所舉的例子，與你現在生活的經驗是否有類似甚至重疊的地方？是否你我有時候都被這些「便利的服務」給牽引著？</p>
 <p>有關這本書第四章的部分，我有寫了一篇類似的評論，有興趣的朋友可以參考一下。</p>
-<figure>E</figure>
+<h3><a href="https://vocus.cc/pol-and-ux/5f4b5f9bfd89780001b302ae">由演算法創造你我的不同世界觀｜方格子 vocus</a></h3><span>近期 Facebook 的演算法對於世界的影響，已經開始透過各種公開平台以不同的面向在進行討論。但是，對於使用者來說，我們必須認知，並且掌握自己對於「資訊探索的權力與能力」。不管你是使用 Google、Facebook，或者是其他工具。 演算法, Facebook, Google, 媒體識讀, 使用者經驗, Facebook, Google, 資訊, 搜尋, 社群, 世界, 關鍵字, 影響, 議題, 討論</span><img src="https://images.vocus.cc/c808106a-151c-4e33-b815-38e104135282.jpg">
 <p>另外在第一章的部分，也有方格子的朋友用了精彩的引述，解釋為何不良的使用者設計可能會產生災害，容我引用分享給各位。</p>
-<figure>E</figure>
+<h3><a href="https://vocus.cc/article/612216befd89780001994a40">那些新科技如何憑設計進入你的生活 ︳儲思《我們的行為是怎樣被設計的》｜方格子 vocus</a></h3><span>設計的本質是為人類帶來更美好的生活體驗，而這樣的體驗唯有對人類本身的了解，無論是習慣、文化或是年齡經驗，從這裡出發，貼近生活最真實的樣貌，才有可能被稱為一個「好的設計」，正式走進人們的生活之中。 我們的行為是怎樣被設計的, 書評, 匡山, 設計, 閱讀, 泡個文字浴, 科技, 互動, 設計, 人類, 體驗, 核電廠, 警示, 助理, 事故, 資訊, 電腦</span><img src="https://images.vocus.cc/fe1723ac-edae-4d04-845a-4d9c04182b2d.jpg">
 <h3>5. 創新的用途理論</h3>
-<figure>E</figure>
+<h3><a href="https://lihi1.com/l3Ukw">創新的用途理論：掌握消費者選擇，創新不必碰運氣 電子書 by 克雷頓‧克里斯汀生 Clayton M. Christensen、泰迪‧霍爾 Taddy Hall、凱倫‧狄倫 Karen Dillon、大衛‧鄧肯 David S. Duncan - Rakuten Kobo</a></h3><span>在 Kobo 閱讀 克雷頓‧克里斯汀生 Clayton M. Christensen、泰迪‧霍爾 Taddy Hall、凱倫‧狄倫 Karen Dillon、大衛‧鄧肯 David S. Duncan 的 《創新的用途理論：掌握消費者選擇，創新不必碰運氣 Competing Against Luck》。☆《華爾街日報》、英國《金融時報》、《財星》、《富比士》、《公司雜誌》專文報導推薦 當代最有影響力的創新大師克里斯汀生最新著作 揭開破壞性創新未解決的關鍵：商機在哪裡？該如何創新？ **顧客想要的不是你的產品或服務，**而是解決他問題的方案...</span><img src="https://kbimages1-a.akamaihd.net/4b190a48-f992-472e-a8ad-91e4a3396d67/1200/1200/False/IcXNf3drkDaYd7ypoxNcpg.jpg">
 <p>使用者為何會使用我們的產品？甚或者是捨棄了原本他所習慣使用的產品，而轉投入我們的懷抱？事實上，使用者常常會以<strong>「在某個情境下，我必須透過某個方式，完成我想完成的目的」</strong>的思考方式，去決定他所要「雇用」的某個他認為可以完成自己目的的服務或者產品。</p>
 <p>創新的用途理論一書中所提出的<strong>「Jobs To Be Done」</strong>思考方法，是近幾年來產品設計師在思考產品開發方向時，常會採用的思考策略。而且比起傳統的「設計思考」方式，更能結合品牌的商業模式，進行更妥善的產品開發與行銷策略。對於要從事 UX 工作的朋友，是很適合參考的入門書籍。</p>
